rules.v4
*raw
:PREROUTING ACCEPT [58137:72305201]
:OUTPUT ACCEPT [126095:125946300]
# ICMP는 호스트가 여전히 살아 있는지 확인하기 위해 호스트를 ping하는 데만 사용됩니다. 
# 일반적으로 필요하지 않으며 공격 대상 탐지, Ping of Death (ping flood), ICMP flood 및 ICMP fragmentation flood에 사용되기 때문에 
# 모든 ICMP 패킷을 차단합니다.

-A PREROUTING -p icmp -j DROP 

#  1.1.1.1 DNS를 허용합니다.
-A PREROUTING -s 1.1.1.1 -j ACCEPT
-A PREROUTING -s 1.0.0.1 -j ACCEPT
# Google DNS를 허용합니다.
-A PREROUTING -s 8.8.8.8 -j ACCEPT
-A PREROUTING -s 8.4.4.8 -j ACCEPT
# Open DNS를 허용합니다.
-A PREROUTING -s 208.67.222.222 -j ACCEPT
-A PREROUTING -s 208.67.220.220 -j ACCEPT
# quad9 DNS를 허용합니다.
-A PREROUTING -s 9.9.9.9 -j ACCEPT
-A PREROUTING -s 149.112.112.112 -j ACCEPT
# Comodo Secure DNS를 허용합니다.
-A PREROUTING -s 8.26.56.26 -j ACCEPT
-A PREROUTING -s 8.20.247.20 -j ACCEPT
# AdGuard DNS를 허용합니다.
-A PREROUTING -s 176.103.130.130 -j ACCEPT
-A PREROUTING -s 176.103.130.131 -j ACCEPT
-A PREROUTING -s 176.103.130.132 -j ACCEPT
-A PREROUTING -s 176.103.130.134 -j ACCEPT
# 내부망 아이피주소를 허용합니다.
-A PREROUTING -s 224.0.0.0/3 -j ACCEPT
-A PREROUTING -s 169.254.0.0/16 -j ACCEPT
-A PREROUTING -s 172.16.0.0/12 -j ACCEPT
-A PREROUTING -s 192.0.2.0/24 -j ACCEPT
-A PREROUTING -s 192.168.0.0/16 -j ACCEPT
-A PREROUTING -s 10.0.0.0/8 -j ACCEPT
-A PREROUTING -s 0.0.0.0/8 -j ACCEPT
-A PREROUTING -s 240.0.0.0/5 -j ACCEPT
-A PREROUTING -s 127.0.0.0/8 -j ACCEPT
# 한국 아이피주소를 허용합니다. -------------------------------------
-A PREROUTING -s 1.11.0.0/16 -j ACCEPT
-A PREROUTING -s 1.16.0.0/18 -j ACCEPT
-A PREROUTING -s 1.18.116.0/22 -j ACCEPT
-A PREROUTING -s 1.18.120.0/21 -j ACCEPT
-A PREROUTING -s 1.18.128.0/17 -j ACCEPT
-A PREROUTING -s 1.19.0.0/16 -j ACCEPT
-A PREROUTING -s 1.32.216.0/21 -j ACCEPT
-A PREROUTING -s 1.96.0.0/12 -j ACCEPT
-A PREROUTING -s 1.176.0.0/15 -j ACCEPT
-A PREROUTING -s 1.201.0.0/16 -j ACCEPT
-A PREROUTING -s 1.208.0.0/12 -j ACCEPT
-A PREROUTING -s 1.224.0.0/11 -j ACCEPT
-A PREROUTING -s 2.59.153.0/24 -j ACCEPT
-A PREROUTING -s 3.34.0.0/15 -j ACCEPT
-A PREROUTING -s 8.38.149.0/24 -j ACCEPT
-A PREROUTING -s 13.33.188.0/24 -j ACCEPT
-A PREROUTING -s 13.104.47.0/24 -j ACCEPT
-A PREROUTING -s 13.104.56.0/22 -j ACCEPT
-A PREROUTING -s 13.104.60.0/23 -j ACCEPT
-A PREROUTING -s 13.104.62.0/24 -j ACCEPT
-A PREROUTING -s 13.104.63.0/25 -j ACCEPT
-A PREROUTING -s 13.104.96.88/29 -j ACCEPT
-A PREROUTING -s 13.104.96.176/28 -j ACCEPT
-A PREROUTING -s 13.104.96.192/29 -j ACCEPT
-A PREROUTING -s 13.104.96.200/30 -j ACCEPT
-A PREROUTING -s 13.104.97.104/29 -j ACCEPT
-A PREROUTING -s 13.104.97.112/28 -j ACCEPT
-A PREROUTING -s 13.104.97.132/30 -j ACCEPT
-A PREROUTING -s 13.104.97.144/28 -j ACCEPT
-A PREROUTING -s 13.104.129.192/26 -j ACCEPT
-A PREROUTING -s 13.104.157.0/25 -j ACCEPT
-A PREROUTING -s 13.104.223.128/26 -j ACCEPT
-A PREROUTING -s 13.106.90.0/23 -j ACCEPT
-A PREROUTING -s 13.106.92.0/23 -j ACCEPT
-A PREROUTING -s 13.106.224.0/23 -j ACCEPT
-A PREROUTING -s 13.107.185.148/30 -j ACCEPT
-A PREROUTING -s 13.107.185.160/30 -j ACCEPT
-A PREROUTING -s 13.107.194.20/30 -j ACCEPT
-A PREROUTING -s 13.124.0.0/15 -j ACCEPT
-A PREROUTING -s 13.209.0.0/16 -j ACCEPT
-A PREROUTING -s 13.225.105.0/24 -j ACCEPT
-A PREROUTING -s 13.225.106.0/23 -j ACCEPT
-A PREROUTING -s 13.225.108.0/22 -j ACCEPT
-A PREROUTING -s 13.225.112.0/20 -j ACCEPT
-A PREROUTING -s 13.225.128.0/21 -j ACCEPT
-A PREROUTING -s 13.225.136.0/24 -j ACCEPT
-A PREROUTING -s 14.0.32.0/19 -j ACCEPT
-A PREROUTING -s 14.0.64.0/18 -j ACCEPT
-A PREROUTING -s 14.4.0.0/14 -j ACCEPT
-A PREROUTING -s 14.32.0.0/11 -j ACCEPT
-A PREROUTING -s 14.64.0.0/11 -j ACCEPT
-A PREROUTING -s 14.128.48.0/21 -j ACCEPT
-A PREROUTING -s 14.128.128.0/17 -j ACCEPT
-A PREROUTING -s 14.129.0.0/16 -j ACCEPT
-A PREROUTING -s 14.138.0.0/16 -j ACCEPT
-A PREROUTING -s 14.192.80.0/20 -j ACCEPT
-A PREROUTING -s 14.206.0.0/16 -j ACCEPT
-A PREROUTING -s 15.164.0.0/15 -j ACCEPT
-A PREROUTING -s 15.177.76.0/24 -j ACCEPT
-A PREROUTING -s 17.91.200.0/21 -j ACCEPT
-A PREROUTING -s 17.92.0.0/21 -j ACCEPT
-A PREROUTING -s 17.92.8.0/23 -j ACCEPT
-A PREROUTING -s 17.253.114.0/23 -j ACCEPT
-A PREROUTING -s 20.39.168.0/21 -j ACCEPT
-A PREROUTING -s 20.39.184.0/21 -j ACCEPT
-A PREROUTING -s 20.39.192.0/20 -j ACCEPT
-A PREROUTING -s 20.41.64.0/18 -j ACCEPT
-A PREROUTING -s 20.44.24.0/21 -j ACCEPT
-A PREROUTING -s 20.150.4.0/23 -j ACCEPT
-A PREROUTING -s 20.150.14.0/23 -j ACCEPT
-A PREROUTING -s 20.190.144.128/25 -j ACCEPT
-A PREROUTING -s 20.190.148.0/24 -j ACCEPT
-A PREROUTING -s 20.190.179.0/24 -j ACCEPT
-A PREROUTING -s 20.190.180.0/24 -j ACCEPT
-A PREROUTING -s 23.9.216.0/24 -j ACCEPT
-A PREROUTING -s 23.9.220.0/24 -j ACCEPT
-A PREROUTING -s 23.9.223.0/24 -j ACCEPT
-A PREROUTING -s 23.9.240.0/24 -j ACCEPT
-A PREROUTING -s 23.9.244.0/24 -j ACCEPT
-A PREROUTING -s 23.9.247.0/24 -j ACCEPT
-A PREROUTING -s 23.9.249.0/24 -j ACCEPT
-A PREROUTING -s 23.9.252.0/24 -j ACCEPT
-A PREROUTING -s 23.12.224.0/20 -j ACCEPT
-A PREROUTING -s 23.15.13.0/24 -j ACCEPT
-A PREROUTING -s 23.33.120.0/22 -j ACCEPT
-A PREROUTING -s 23.33.144.0/20 -j ACCEPT
-A PREROUTING -s 23.35.218.0/24 -j ACCEPT
-A PREROUTING -s 23.35.220.0/22 -j ACCEPT
-A PREROUTING -s 23.43.0.0/20 -j ACCEPT
-A PREROUTING -s 23.44.173.0/24 -j ACCEPT
-A PREROUTING -s 23.46.22.0/23 -j ACCEPT
-A PREROUTING -s 23.49.48.0/23 -j ACCEPT
-A PREROUTING -s 23.49.144.0/20 -j ACCEPT
-A PREROUTING -s 23.50.0.0/22 -j ACCEPT
-A PREROUTING -s 23.53.224.0/22 -j ACCEPT
-A PREROUTING -s 23.53.228.0/24 -j ACCEPT
-A PREROUTING -s 23.57.74.0/24 -j ACCEPT
-A PREROUTING -s 23.57.244.0/24 -j ACCEPT
-A PREROUTING -s 23.58.44.0/24 -j ACCEPT
-A PREROUTING -s 23.58.88.0/24 -j ACCEPT
-A PREROUTING -s 23.59.72.0/24 -j ACCEPT
-A PREROUTING -s 23.59.151.0/24 -j ACCEPT
-A PREROUTING -s 23.62.232.0/22 -j ACCEPT
-A PREROUTING -s 23.64.131.0/24 -j ACCEPT
-A PREROUTING -s 23.64.134.0/24 -j ACCEPT
-A PREROUTING -s 23.65.188.0/24 -j ACCEPT
-A PREROUTING -s 23.67.53.0/24 -j ACCEPT
-A PREROUTING -s 23.74.16.0/21 -j ACCEPT
-A PREROUTING -s 23.76.153.0/24 -j ACCEPT
-A PREROUTING -s 23.79.245.0/24 -j ACCEPT
-A PREROUTING -s 23.103.138.0/28 -j ACCEPT
-A PREROUTING -s 23.103.141.128/26 -j ACCEPT
-A PREROUTING -s 23.103.141.192/27 -j ACCEPT
-A PREROUTING -s 23.194.214.0/24 -j ACCEPT
-A PREROUTING -s 23.200.75.0/24 -j ACCEPT
-A PREROUTING -s 23.203.175.0/24 -j ACCEPT
-A PREROUTING -s 23.204.116.0/22 -j ACCEPT
-A PREROUTING -s 23.207.200.0/24 -j ACCEPT
-A PREROUTING -s 23.211.117.0/24 -j ACCEPT
-A PREROUTING -s 23.212.12.0/22 -j ACCEPT
-A PREROUTING -s 23.248.160.0/24 -j ACCEPT
-A PREROUTING -s 27.0.236.0/22 -j ACCEPT
-A PREROUTING -s 27.1.0.0/16 -j ACCEPT
-A PREROUTING -s 27.35.0.0/16 -j ACCEPT
-A PREROUTING -s 27.50.33.213/32 -j ACCEPT
-A PREROUTING -s 27.50.33.214/32 -j ACCEPT
-A PREROUTING -s 27.96.128.0/18 -j ACCEPT
-A PREROUTING -s 27.100.128.0/17 -j ACCEPT
-A PREROUTING -s 27.101.0.0/16 -j ACCEPT
-A PREROUTING -s 27.102.0.0/16 -j ACCEPT
-A PREROUTING -s 27.111.96.0/19 -j ACCEPT
-A PREROUTING -s 27.111.174.4/30 -j ACCEPT
-A PREROUTING -s 27.111.191.160/29 -j ACCEPT
-A PREROUTING -s 27.111.191.168/32 -j ACCEPT
-A PREROUTING -s 27.111.194.208/29 -j ACCEPT
-A PREROUTING -s 27.112.128.0/17 -j ACCEPT
-A PREROUTING -s 27.113.0.0/17 -j ACCEPT
-A PREROUTING -s 27.115.128.0/17 -j ACCEPT
-A PREROUTING -s 27.116.64.0/18 -j ACCEPT
-A PREROUTING -s 27.116.128.0/17 -j ACCEPT
-A PREROUTING -s 27.117.0.0/16 -j ACCEPT
-A PREROUTING -s 27.118.64.0/18 -j ACCEPT
-A PREROUTING -s 27.118.128.0/17 -j ACCEPT
-A PREROUTING -s 27.119.0.0/16 -j ACCEPT
-A PREROUTING -s 27.120.0.0/18 -j ACCEPT
-A PREROUTING -s 27.122.128.0/17 -j ACCEPT
-A PREROUTING -s 27.124.8.0/24 -j ACCEPT
-A PREROUTING -s 27.124.128.0/17 -j ACCEPT
-A PREROUTING -s 27.125.0.0/17 -j ACCEPT
-A PREROUTING -s 27.126.0.0/18 -j ACCEPT
-A PREROUTING -s 27.160.0.0/12 -j ACCEPT
-A PREROUTING -s 27.176.0.0/13 -j ACCEPT
-A PREROUTING -s 27.232.0.0/13 -j ACCEPT
-A PREROUTING -s 27.255.64.0/18 -j ACCEPT
-A PREROUTING -s 31.13.24.8/31 -j ACCEPT
-A PREROUTING -s 31.13.24.12/31 -j ACCEPT
-A PREROUTING -s 31.13.24.72/31 -j ACCEPT
-A PREROUTING -s 31.13.24.126/31 -j ACCEPT
-A PREROUTING -s 31.13.24.128/31 -j ACCEPT
-A PREROUTING -s 31.13.24.134/31 -j ACCEPT
-A PREROUTING -s 31.13.25.164/31 -j ACCEPT
-A PREROUTING -s 31.13.26.135/32 -j ACCEPT
-A PREROUTING -s 31.13.26.177/32 -j ACCEPT
-A PREROUTING -s 31.13.27.49/32 -j ACCEPT
-A PREROUTING -s 31.13.27.213/32 -j ACCEPT
-A PREROUTING -s 31.13.28.92/31 -j ACCEPT
-A PREROUTING -s 31.13.30.41/32 -j ACCEPT
-A PREROUTING -s 31.13.30.180/31 -j ACCEPT
-A PREROUTING -s 31.13.30.183/32 -j ACCEPT
-A PREROUTING -s 31.13.30.207/32 -j ACCEPT
-A PREROUTING -s 31.13.31.113/32 -j ACCEPT
-A PREROUTING -s 31.13.31.115/32 -j ACCEPT
-A PREROUTING -s 31.13.68.0/24 -j ACCEPT
-A PREROUTING -s 31.13.76.0/24 -j ACCEPT
-A PREROUTING -s 31.40.251.0/24 -j ACCEPT
-A PREROUTING -s 34.64.0.0/23 -j ACCEPT
-A PREROUTING -s 34.64.2.0/24 -j ACCEPT
-A PREROUTING -s 34.98.164.0/22 -j ACCEPT
-A PREROUTING -s 34.98.174.0/23 -j ACCEPT
-A PREROUTING -s 36.38.0.0/15 -j ACCEPT
-A PREROUTING -s 37.252.244.0/24 -j ACCEPT
-A PREROUTING -s 38.28.8.12/31 -j ACCEPT
-A PREROUTING -s 38.28.8.17/32 -j ACCEPT
-A PREROUTING -s 39.4.0.0/14 -j ACCEPT
-A PREROUTING -s 39.16.0.0/12 -j ACCEPT
-A PREROUTING -s 39.112.0.0/12 -j ACCEPT
-A PREROUTING -s 40.66.64.136/29 -j ACCEPT
-A PREROUTING -s 40.66.92.0/27 -j ACCEPT
-A PREROUTING -s 40.79.220.0/23 -j ACCEPT
-A PREROUTING -s 40.80.32.0/21 -j ACCEPT
-A PREROUTING -s 40.80.168.0/21 -j ACCEPT
-A PREROUTING -s 40.80.224.0/20 -j ACCEPT
-A PREROUTING -s 40.82.128.0/19 -j ACCEPT
-A PREROUTING -s 40.89.192.0/19 -j ACCEPT
-A PREROUTING -s 40.90.17.224/27 -j ACCEPT
-A PREROUTING -s 40.90.128.176/28 -j ACCEPT
-A PREROUTING -s 40.90.131.128/26 -j ACCEPT
-A PREROUTING -s 40.90.139.128/26 -j ACCEPT
-A PREROUTING -s 40.90.156.64/27 -j ACCEPT
-A PREROUTING -s 40.90.157.32/27 -j ACCEPT
-A PREROUTING -s 40.92.52.0/24 -j ACCEPT
-A PREROUTING -s 40.92.84.0/24 -j ACCEPT
-A PREROUTING -s 40.92.242.0/23 -j ACCEPT
-A PREROUTING -s 40.92.254.0/24 -j ACCEPT
-A PREROUTING -s 40.93.86.0/24 -j ACCEPT
-A PREROUTING -s 40.93.242.0/23 -j ACCEPT
-A PREROUTING -s 40.94.227.0/25 -j ACCEPT
-A PREROUTING -s 40.94.233.0/24 -j ACCEPT
-A PREROUTING -s 40.94.234.0/24 -j ACCEPT
-A PREROUTING -s 40.94.241.0/24 -j ACCEPT
-A PREROUTING -s 40.94.242.0/24 -j ACCEPT
-A PREROUTING -s 40.94.244.0/24 -j ACCEPT
-A PREROUTING -s 40.94.246.0/24 -j ACCEPT
-A PREROUTING -s 40.94.254.0/23 -j ACCEPT
-A PREROUTING -s 40.95.53.0/24 -j ACCEPT
-A PREROUTING -s 40.95.83.0/24 -j ACCEPT
-A PREROUTING -s 40.95.242.0/23 -j ACCEPT
-A PREROUTING -s 40.95.254.0/24 -j ACCEPT
-A PREROUTING -s 40.96.2.144/29 -j ACCEPT
-A PREROUTING -s 40.96.2.160/27 -j ACCEPT
-A PREROUTING -s 40.96.2.192/26 -j ACCEPT
-A PREROUTING -s 40.96.3.0/27 -j ACCEPT
-A PREROUTING -s 40.96.7.160/28 -j ACCEPT
-A PREROUTING -s 40.96.17.64/26 -j ACCEPT
-A PREROUTING -s 40.96.17.128/27 -j ACCEPT
-A PREROUTING -s 40.96.17.160/28 -j ACCEPT
-A PREROUTING -s 40.96.47.8/29 -j ACCEPT
-A PREROUTING -s 40.96.47.64/26 -j ACCEPT
-A PREROUTING -s 40.96.47.128/26 -j ACCEPT
-A PREROUTING -s 40.96.47.192/29 -j ACCEPT
-A PREROUTING -s 40.100.20.0/22 -j ACCEPT
-A PREROUTING -s 40.100.44.0/22 -j ACCEPT
-A PREROUTING -s 40.100.48.0/22 -j ACCEPT
-A PREROUTING -s 40.103.28.64/28 -j ACCEPT
-A PREROUTING -s 40.103.28.128/28 -j ACCEPT
-A PREROUTING -s 40.103.28.192/28 -j ACCEPT
-A PREROUTING -s 40.103.29.0/28 -j ACCEPT
-A PREROUTING -s 40.107.128.0/23 -j ACCEPT
-A PREROUTING -s 40.107.132.0/24 -j ACCEPT
-A PREROUTING -s 40.107.226.0/24 -j ACCEPT
-A PREROUTING -s 40.107.230.0/24 -j ACCEPT
-A PREROUTING -s 40.107.233.0/24 -j ACCEPT
-A PREROUTING -s 40.107.255.0/24 -j ACCEPT
-A PREROUTING -s 40.108.153.0/24 -j ACCEPT
-A PREROUTING -s 40.108.156.0/24 -j ACCEPT
-A PREROUTING -s 40.126.16.128/25 -j ACCEPT
-A PREROUTING -s 40.126.20.0/24 -j ACCEPT
-A PREROUTING -s 40.126.51.0/24 -j ACCEPT
-A PREROUTING -s 40.126.52.0/24 -j ACCEPT
-A PREROUTING -s 42.8.0.0/13 -j ACCEPT
-A PREROUTING -s 42.16.0.0/12 -j ACCEPT
-A PREROUTING -s 42.32.0.0/12 -j ACCEPT
-A PREROUTING -s 42.82.0.0/16 -j ACCEPT
-A PREROUTING -s 43.224.104.0/22 -j ACCEPT
-A PREROUTING -s 43.226.228.0/25 -j ACCEPT
-A PREROUTING -s 43.226.231.0/24 -j ACCEPT
-A PREROUTING -s 43.227.116.0/22 -j ACCEPT
-A PREROUTING -s 43.227.120.0/22 -j ACCEPT
-A PREROUTING -s 43.228.160.0/22 -j ACCEPT
-A PREROUTING -s 43.229.0.0/22 -j ACCEPT
-A PREROUTING -s 43.230.0.0/22 -j ACCEPT
-A PREROUTING -s 43.230.9.0/24 -j ACCEPT
-A PREROUTING -s 43.230.76.0/22 -j ACCEPT
-A PREROUTING -s 43.230.80.0/22 -j ACCEPT
-A PREROUTING -s 43.230.216.0/22 -j ACCEPT
-A PREROUTING -s 43.241.44.0/24 -j ACCEPT
-A PREROUTING -s 43.241.104.0/21 -j ACCEPT
-A PREROUTING -s 43.242.112.0/22 -j ACCEPT
-A PREROUTING -s 43.243.216.0/22 -j ACCEPT
-A PREROUTING -s 43.246.152.0/22 -j ACCEPT
-A PREROUTING -s 43.246.180.0/22 -j ACCEPT
-A PREROUTING -s 43.247.104.0/22 -j ACCEPT
-A PREROUTING -s 43.247.192.0/22 -j ACCEPT
-A PREROUTING -s 43.249.128.0/25 -j ACCEPT
-A PREROUTING -s 43.249.129.0/25 -j ACCEPT
-A PREROUTING -s 43.249.130.128/25 -j ACCEPT
-A PREROUTING -s 43.249.131.128/25 -j ACCEPT
-A PREROUTING -s 43.250.152.0/22 -j ACCEPT
-A PREROUTING -s 43.251.28.0/22 -j ACCEPT
-A PREROUTING -s 43.251.68.0/22 -j ACCEPT
-A PREROUTING -s 43.251.120.0/22 -j ACCEPT
-A PREROUTING -s 43.254.244.0/22 -j ACCEPT
-A PREROUTING -s 43.255.248.0/21 -j ACCEPT
-A PREROUTING -s 45.43.40.0/22 -j ACCEPT
-A PREROUTING -s 45.64.140.0/22 -j ACCEPT
-A PREROUTING -s 45.64.144.0/22 -j ACCEPT
-A PREROUTING -s 45.64.152.0/22 -j ACCEPT
-A PREROUTING -s 45.64.172.0/22 -j ACCEPT
-A PREROUTING -s 45.67.97.0/24 -j ACCEPT
-A PREROUTING -s 45.91.24.0/24 -j ACCEPT
-A PREROUTING -s 45.91.225.0/24 -j ACCEPT
-A PREROUTING -s 45.93.65.0/24 -j ACCEPT
-A PREROUTING -s 45.94.152.0/24 -j ACCEPT
-A PREROUTING -s 45.112.88.0/21 -j ACCEPT
-A PREROUTING -s 45.112.96.0/20 -j ACCEPT
-A PREROUTING -s 45.112.112.0/21 -j ACCEPT
-A PREROUTING -s 45.112.152.0/21 -j ACCEPT
-A PREROUTING -s 45.112.160.0/21 -j ACCEPT
-A PREROUTING -s 45.112.168.0/22 -j ACCEPT
-A PREROUTING -s 45.113.34.0/24 -j ACCEPT
-A PREROUTING -s 45.113.44.0/22 -j ACCEPT
-A PREROUTING -s 45.113.48.0/22 -j ACCEPT
-A PREROUTING -s 45.114.128.0/23 -j ACCEPT
-A PREROUTING -s 45.114.131.0/24 -j ACCEPT
-A PREROUTING -s 45.115.25.0/24 -j ACCEPT
-A PREROUTING -s 45.115.152.0/22 -j ACCEPT
-A PREROUTING -s 45.117.12.0/22 -j ACCEPT
-A PREROUTING -s 45.119.144.0/22 -j ACCEPT
-A PREROUTING -s 45.120.64.0/21 -j ACCEPT
-A PREROUTING -s 45.120.200.0/24 -j ACCEPT
-A PREROUTING -s 45.121.164.0/22 -j ACCEPT
-A PREROUTING -s 45.125.232.0/22 -j ACCEPT
-A PREROUTING -s 45.126.150.0/23 -j ACCEPT
-A PREROUTING -s 45.130.33.0/24 -j ACCEPT
-A PREROUTING -s 45.130.139.0/24 -j ACCEPT
-A PREROUTING -s 45.138.209.0/24 -j ACCEPT
-A PREROUTING -s 45.142.153.0/24 -j ACCEPT
-A PREROUTING -s 45.150.172.0/22 -j ACCEPT
-A PREROUTING -s 45.156.116.0/23 -j ACCEPT
-A PREROUTING -s 45.158.32.0/24 -j ACCEPT
-A PREROUTING -s 45.195.2.0/23 -j ACCEPT
-A PREROUTING -s 45.195.206.0/23 -j ACCEPT
-A PREROUTING -s 45.248.72.0/22 -j ACCEPT
-A PREROUTING -s 45.249.64.0/22 -j ACCEPT
-A PREROUTING -s 45.249.160.0/22 -j ACCEPT
-A PREROUTING -s 45.250.204.0/22 -j ACCEPT
-A PREROUTING -s 45.250.208.0/22 -j ACCEPT
-A PREROUTING -s 45.250.220.0/22 -j ACCEPT
-A PREROUTING -s 45.254.252.0/24 -j ACCEPT
-A PREROUTING -s 47.89.122.0/24 -j ACCEPT
-A PREROUTING -s 49.1.0.0/16 -j ACCEPT
-A PREROUTING -s 49.8.0.0/14 -j ACCEPT
-A PREROUTING -s 49.16.0.0/12 -j ACCEPT
-A PREROUTING -s 49.50.0.0/22 -j ACCEPT
-A PREROUTING -s 49.50.16.0/20 -j ACCEPT
-A PREROUTING -s 49.50.32.0/19 -j ACCEPT
-A PREROUTING -s 49.50.128.0/18 -j ACCEPT
-A PREROUTING -s 49.56.0.0/13 -j ACCEPT
-A PREROUTING -s 49.128.192.0/19 -j ACCEPT
-A PREROUTING -s 49.142.0.0/16 -j ACCEPT
-A PREROUTING -s 49.143.0.0/17 -j ACCEPT
-A PREROUTING -s 49.143.128.0/18 -j ACCEPT
-A PREROUTING -s 49.143.192.0/19 -j ACCEPT
-A PREROUTING -s 49.160.0.0/12 -j ACCEPT
-A PREROUTING -s 49.236.64.0/18 -j ACCEPT
-A PREROUTING -s 49.236.128.0/18 -j ACCEPT
-A PREROUTING -s 49.238.64.0/18 -j ACCEPT
-A PREROUTING -s 49.238.128.0/17 -j ACCEPT
-A PREROUTING -s 49.239.128.0/18 -j ACCEPT
-A PREROUTING -s 49.246.0.0/17 -j ACCEPT
-A PREROUTING -s 49.247.0.0/16 -j ACCEPT
-A PREROUTING -s 49.254.0.0/16 -j ACCEPT
-A PREROUTING -s 50.97.17.93/32 -j ACCEPT
-A PREROUTING -s 50.97.17.94/31 -j ACCEPT
-A PREROUTING -s 50.97.17.96/28 -j ACCEPT
-A PREROUTING -s 50.97.17.112/31 -j ACCEPT
-A PREROUTING -s 50.97.17.114/32 -j ACCEPT
-A PREROUTING -s 50.97.17.116/32 -j ACCEPT
-A PREROUTING -s 50.97.17.167/32 -j ACCEPT
-A PREROUTING -s 50.225.62.88/32 -j ACCEPT
-A PREROUTING -s 52.46.53.0/24 -j ACCEPT
-A PREROUTING -s 52.78.0.0/15 -j ACCEPT
-A PREROUTING -s 52.84.184.0/21 -j ACCEPT
-A PREROUTING -s 52.84.192.0/23 -j ACCEPT
-A PREROUTING -s 52.84.252.0/23 -j ACCEPT
-A PREROUTING -s 52.85.124.0/22 -j ACCEPT
-A PREROUTING -s 52.85.128.0/23 -j ACCEPT
-A PREROUTING -s 52.85.190.0/23 -j ACCEPT
-A PREROUTING -s 52.85.192.0/22 -j ACCEPT
-A PREROUTING -s 52.85.227.0/24 -j ACCEPT
-A PREROUTING -s 52.85.228.0/22 -j ACCEPT
-A PREROUTING -s 52.92.0.0/20 -j ACCEPT
-A PREROUTING -s 52.93.137.0/24 -j ACCEPT
-A PREROUTING -s 52.93.247.0/25 -j ACCEPT
-A PREROUTING -s 52.93.248.0/24 -j ACCEPT
-A PREROUTING -s 52.94.6.0/24 -j ACCEPT
-A PREROUTING -s 52.94.198.64/28 -j ACCEPT
-A PREROUTING -s 52.94.248.176/28 -j ACCEPT
-A PREROUTING -s 52.95.111.0/24 -j ACCEPT
-A PREROUTING -s 52.95.192.0/20 -j ACCEPT
-A PREROUTING -s 52.95.252.0/24 -j ACCEPT
-A PREROUTING -s 52.98.32.64/26 -j ACCEPT
-A PREROUTING -s 52.98.37.64/28 -j ACCEPT
-A PREROUTING -s 52.98.37.80/29 -j ACCEPT
-A PREROUTING -s 52.98.38.128/25 -j ACCEPT
-A PREROUTING -s 52.98.39.128/25 -j ACCEPT
-A PREROUTING -s 52.98.40.0/27 -j ACCEPT
-A PREROUTING -s 52.98.41.224/27 -j ACCEPT
-A PREROUTING -s 52.98.42.0/26 -j ACCEPT
-A PREROUTING -s 52.98.42.64/28 -j ACCEPT
-A PREROUTING -s 52.98.43.48/29 -j ACCEPT
-A PREROUTING -s 52.98.75.128/25 -j ACCEPT
-A PREROUTING -s 52.98.84.192/26 -j ACCEPT
-A PREROUTING -s 52.99.128.192/27 -j ACCEPT
-A PREROUTING -s 52.99.128.224/28 -j ACCEPT
-A PREROUTING -s 52.101.9.0/24 -j ACCEPT
-A PREROUTING -s 52.103.140.0/24 -j ACCEPT
-A PREROUTING -s 52.103.150.0/24 -j ACCEPT
-A PREROUTING -s 52.103.193.0/24 -j ACCEPT
-A PREROUTING -s 52.103.204.0/23 -j ACCEPT
-A PREROUTING -s 52.103.255.0/24 -j ACCEPT
-A PREROUTING -s 52.108.48.0/23 -j ACCEPT
-A PREROUTING -s 52.108.226.0/23 -j ACCEPT
-A PREROUTING -s 52.109.44.0/22 -j ACCEPT
-A PREROUTING -s 52.109.48.0/22 -j ACCEPT
-A PREROUTING -s 52.111.234.0/24 -j ACCEPT
-A PREROUTING -s 52.113.2.0/25 -j ACCEPT
-A PREROUTING -s 52.113.3.128/25 -j ACCEPT
-A PREROUTING -s 52.113.36.0/24 -j ACCEPT
-A PREROUTING -s 52.113.65.0/26 -j ACCEPT
-A PREROUTING -s 52.113.65.192/26 -j ACCEPT
-A PREROUTING -s 52.113.82.0/25 -j ACCEPT
-A PREROUTING -s 52.113.110.0/23 -j ACCEPT
-A PREROUTING -s 52.114.44.0/22 -j ACCEPT
-A PREROUTING -s 52.114.48.0/22 -j ACCEPT
-A PREROUTING -s 52.124.157.0/24 -j ACCEPT
-A PREROUTING -s 52.124.158.0/23 -j ACCEPT
-A PREROUTING -s 52.124.231.0/24 -j ACCEPT
-A PREROUTING -s 52.141.0.0/18 -j ACCEPT
-A PREROUTING -s 52.144.227.64/26 -j ACCEPT
-A PREROUTING -s 52.144.227.192/26 -j ACCEPT
-A PREROUTING -s 52.144.228.192/26 -j ACCEPT
-A PREROUTING -s 52.147.96.0/19 -j ACCEPT
-A PREROUTING -s 52.219.56.0/22 -j ACCEPT
-A PREROUTING -s 52.219.60.0/23 -j ACCEPT
-A PREROUTING -s 52.231.0.0/16 -j ACCEPT
-A PREROUTING -s 52.232.144.0/23 -j ACCEPT
-A PREROUTING -s 52.239.148.0/27 -j ACCEPT
-A PREROUTING -s 52.239.164.192/26 -j ACCEPT
-A PREROUTING -s 52.239.165.0/26 -j ACCEPT
-A PREROUTING -s 52.239.165.160/27 -j ACCEPT
-A PREROUTING -s 52.239.190.128/25 -j ACCEPT
-A PREROUTING -s 52.245.100.0/22 -j ACCEPT
-A PREROUTING -s 52.245.112.0/22 -j ACCEPT
-A PREROUTING -s 52.253.173.0/24 -j ACCEPT
-A PREROUTING -s 52.253.174.0/24 -j ACCEPT
-A PREROUTING -s 54.180.0.0/15 -j ACCEPT
-A PREROUTING -s 54.182.204.0/24 -j ACCEPT
-A PREROUTING -s 54.182.213.0/24 -j ACCEPT
-A PREROUTING -s 54.192.68.0/22 -j ACCEPT
-A PREROUTING -s 54.192.172.0/22 -j ACCEPT
-A PREROUTING -s 54.192.180.0/22 -j ACCEPT
-A PREROUTING -s 54.230.180.0/22 -j ACCEPT
-A PREROUTING -s 54.239.0.192/28 -j ACCEPT
-A PREROUTING -s 54.239.40.152/29 -j ACCEPT
-A PREROUTING -s 54.239.116.0/22 -j ACCEPT
-A PREROUTING -s 54.239.120.0/21 -j ACCEPT
-A PREROUTING -s 54.239.154.0/24 -j ACCEPT
-A PREROUTING -s 54.239.186.0/23 -j ACCEPT
-A PREROUTING -s 57.64.1.125/32 -j ACCEPT
-A PREROUTING -s 57.73.192.0/19 -j ACCEPT
-A PREROUTING -s 58.29.0.0/16 -j ACCEPT
-A PREROUTING -s 58.65.64.0/18 -j ACCEPT
-A PREROUTING -s 58.72.0.0/13 -j ACCEPT
-A PREROUTING -s 58.84.44.0/22 -j ACCEPT
-A PREROUTING -s 58.87.32.0/19 -j ACCEPT
-A PREROUTING -s 58.102.0.0/15 -j ACCEPT
-A PREROUTING -s 58.120.0.0/13 -j ACCEPT
-A PREROUTING -s 58.138.192.0/18 -j ACCEPT
-A PREROUTING -s 58.140.0.0/14 -j ACCEPT
-A PREROUTING -s 58.145.0.0/17 -j ACCEPT
-A PREROUTING -s 58.146.192.0/18 -j ACCEPT
-A PREROUTING -s 58.147.176.0/21 -j ACCEPT
-A PREROUTING -s 58.148.0.0/14 -j ACCEPT
-A PREROUTING -s 58.180.0.0/16 -j ACCEPT
-A PREROUTING -s 58.181.0.0/18 -j ACCEPT
-A PREROUTING -s 58.184.0.0/16 -j ACCEPT
-A PREROUTING -s 58.224.0.0/12 -j ACCEPT
-A PREROUTING -s 59.0.0.0/11 -j ACCEPT
-A PREROUTING -s 59.86.192.0/18 -j ACCEPT
-A PREROUTING -s 59.150.0.0/16 -j ACCEPT
-A PREROUTING -s 59.151.172.0/22 -j ACCEPT
-A PREROUTING -s 59.151.192.0/18 -j ACCEPT
-A PREROUTING -s 59.152.128.0/18 -j ACCEPT
-A PREROUTING -s 59.153.40.0/24 -j ACCEPT
-A PREROUTING -s 59.186.0.0/15 -j ACCEPT
-A PREROUTING -s 60.196.0.0/15 -j ACCEPT
-A PREROUTING -s 60.253.0.0/18 -j ACCEPT
-A PREROUTING -s 60.253.64.0/19 -j ACCEPT
-A PREROUTING -s 60.254.146.0/23 -j ACCEPT
-A PREROUTING -s 61.4.192.0/18 -j ACCEPT
-A PREROUTING -s 61.5.160.0/19 -j ACCEPT
-A PREROUTING -s 61.14.156.11/32 -j ACCEPT
-A PREROUTING -s 61.14.156.12/32 -j ACCEPT
-A PREROUTING -s 61.14.156.72/32 -j ACCEPT
-A PREROUTING -s 61.14.156.211/32 -j ACCEPT
-A PREROUTING -s 61.14.158.21/32 -j ACCEPT
-A PREROUTING -s 61.14.208.0/22 -j ACCEPT
-A PREROUTING -s 61.17.81.0/26 -j ACCEPT
-A PREROUTING -s 61.32.0.0/13 -j ACCEPT
-A PREROUTING -s 61.40.0.0/14 -j ACCEPT
-A PREROUTING -s 61.47.192.0/18 -j ACCEPT
-A PREROUTING -s 61.72.0.0/13 -j ACCEPT
-A PREROUTING -s 61.80.0.0/14 -j ACCEPT
-A PREROUTING -s 61.84.0.0/15 -j ACCEPT
-A PREROUTING -s 61.96.0.0/16 -j ACCEPT
-A PREROUTING -s 61.97.0.0/18 -j ACCEPT
-A PREROUTING -s 61.97.64.0/20 -j ACCEPT
-A PREROUTING -s 61.97.96.0/19 -j ACCEPT
-A PREROUTING -s 61.97.128.0/17 -j ACCEPT
-A PREROUTING -s 61.98.0.0/15 -j ACCEPT
-A PREROUTING -s 61.100.0.0/17 -j ACCEPT
-A PREROUTING -s 61.100.128.0/18 -j ACCEPT
-A PREROUTING -s 61.100.192.0/19 -j ACCEPT
-A PREROUTING -s 61.100.224.0/20 -j ACCEPT
-A PREROUTING -s 61.100.240.0/21 -j ACCEPT
-A PREROUTING -s 61.101.0.0/17 -j ACCEPT
-A PREROUTING -s 61.101.128.0/18 -j ACCEPT
-A PREROUTING -s 61.101.192.0/19 -j ACCEPT
-A PREROUTING -s 61.101.244.0/22 -j ACCEPT
-A PREROUTING -s 61.102.0.0/15 -j ACCEPT
-A PREROUTING -s 61.104.0.0/15 -j ACCEPT
-A PREROUTING -s 61.106.0.0/17 -j ACCEPT
-A PREROUTING -s 61.106.128.0/18 -j ACCEPT
-A PREROUTING -s 61.106.192.0/19 -j ACCEPT
-A PREROUTING -s 61.106.224.0/20 -j ACCEPT
-A PREROUTING -s 61.107.0.0/16 -j ACCEPT
-A PREROUTING -s 61.108.0.0/15 -j ACCEPT
-A PREROUTING -s 61.110.0.0/19 -j ACCEPT
-A PREROUTING -s 61.110.48.0/20 -j ACCEPT
-A PREROUTING -s 61.110.64.0/18 -j ACCEPT
-A PREROUTING -s 61.110.128.0/17 -j ACCEPT
-A PREROUTING -s 61.111.0.0/18 -j ACCEPT
-A PREROUTING -s 61.111.112.0/20 -j ACCEPT
-A PREROUTING -s 61.111.128.0/18 -j ACCEPT
-A PREROUTING -s 61.111.240.0/20 -j ACCEPT
-A PREROUTING -s 61.245.176.0/20 -j ACCEPT
-A PREROUTING -s 61.245.224.0/19 -j ACCEPT
-A PREROUTING -s 61.247.64.0/18 -j ACCEPT
-A PREROUTING -s 61.247.128.0/19 -j ACCEPT
-A PREROUTING -s 61.247.192.0/19 -j ACCEPT
-A PREROUTING -s 61.248.176.0/20 -j ACCEPT
-A PREROUTING -s 61.248.224.0/22 -j ACCEPT
-A PREROUTING -s 61.249.92.0/22 -j ACCEPT
-A PREROUTING -s 61.249.96.0/19 -j ACCEPT
-A PREROUTING -s 61.249.128.0/19 -j ACCEPT
-A PREROUTING -s 61.249.224.0/19 -j ACCEPT
-A PREROUTING -s 61.250.0.0/16 -j ACCEPT
-A PREROUTING -s 61.251.0.0/19 -j ACCEPT
-A PREROUTING -s 61.251.64.0/20 -j ACCEPT
-A PREROUTING -s 61.251.96.0/20 -j ACCEPT
-A PREROUTING -s 61.251.160.0/19 -j ACCEPT
-A PREROUTING -s 61.251.192.0/18 -j ACCEPT
-A PREROUTING -s 61.252.16.0/20 -j ACCEPT
-A PREROUTING -s 61.252.32.0/19 -j ACCEPT
-A PREROUTING -s 61.252.76.0/22 -j ACCEPT
-A PREROUTING -s 61.252.96.0/19 -j ACCEPT
-A PREROUTING -s 61.252.128.0/17 -j ACCEPT
-A PREROUTING -s 61.253.0.0/16 -j ACCEPT
-A PREROUTING -s 61.254.0.0/15 -j ACCEPT
-A PREROUTING -s 62.84.154.240/28 -j ACCEPT
-A PREROUTING -s 62.117.217.0/24 -j ACCEPT
-A PREROUTING -s 62.216.128.97/32 -j ACCEPT
-A PREROUTING -s 62.216.128.98/32 -j ACCEPT
-A PREROUTING -s 62.216.128.177/32 -j ACCEPT
-A PREROUTING -s 62.216.129.169/32 -j ACCEPT
-A PREROUTING -s 62.216.130.25/32 -j ACCEPT
-A PREROUTING -s 62.216.130.37/32 -j ACCEPT
-A PREROUTING -s 62.216.138.3/32 -j ACCEPT
-A PREROUTING -s 62.216.138.5/32 -j ACCEPT
-A PREROUTING -s 62.216.144.85/32 -j ACCEPT
-A PREROUTING -s 62.216.144.129/32 -j ACCEPT
-A PREROUTING -s 62.216.144.169/32 -j ACCEPT
-A PREROUTING -s 62.216.144.177/32 -j ACCEPT
-A PREROUTING -s 62.216.145.77/32 -j ACCEPT
-A PREROUTING -s 62.216.145.89/32 -j ACCEPT
-A PREROUTING -s 62.216.145.161/32 -j ACCEPT
-A PREROUTING -s 62.216.145.209/32 -j ACCEPT
-A PREROUTING -s 62.216.146.161/32 -j ACCEPT
-A PREROUTING -s 62.216.146.217/32 -j ACCEPT
-A PREROUTING -s 62.216.146.225/32 -j ACCEPT
-A PREROUTING -s 62.216.146.229/32 -j ACCEPT
-A PREROUTING -s 62.216.147.1/32 -j ACCEPT
-A PREROUTING -s 62.216.147.177/32 -j ACCEPT
-A PREROUTING -s 62.216.147.209/32 -j ACCEPT
-A PREROUTING -s 63.105.192.0/21 -j ACCEPT
-A PREROUTING -s 63.105.200.0/22 -j ACCEPT
-A PREROUTING -s 63.105.205.0/24 -j ACCEPT
-A PREROUTING -s 63.105.206.0/23 -j ACCEPT
-A PREROUTING -s 63.142.3.0/24 -j ACCEPT
-A PREROUTING -s 63.142.14.0/23 -j ACCEPT
-A PREROUTING -s 63.146.223.5/32 -j ACCEPT
-A PREROUTING -s 63.146.223.9/32 -j ACCEPT
-A PREROUTING -s 63.146.223.21/32 -j ACCEPT
-A PREROUTING -s 63.146.223.25/32 -j ACCEPT
-A PREROUTING -s 63.146.223.33/32 -j ACCEPT
-A PREROUTING -s 63.146.223.37/32 -j ACCEPT
-A PREROUTING -s 63.146.223.77/32 -j ACCEPT
-A PREROUTING -s 63.146.223.85/32 -j ACCEPT
-A PREROUTING -s 63.146.223.113/32 -j ACCEPT
-A PREROUTING -s 63.146.223.125/32 -j ACCEPT
-A PREROUTING -s 63.146.223.161/32 -j ACCEPT
-A PREROUTING -s 63.146.223.193/32 -j ACCEPT
-A PREROUTING -s 63.146.223.197/32 -j ACCEPT
-A PREROUTING -s 63.146.223.201/32 -j ACCEPT
-A PREROUTING -s 63.146.223.205/32 -j ACCEPT
-A PREROUTING -s 63.146.223.209/32 -j ACCEPT
-A PREROUTING -s 63.146.223.213/32 -j ACCEPT
-A PREROUTING -s 63.146.223.217/32 -j ACCEPT
-A PREROUTING -s 63.148.48.24/29 -j ACCEPT
-A PREROUTING -s 63.148.48.32/29 -j ACCEPT
-A PREROUTING -s 63.150.141.96/28 -j ACCEPT
-A PREROUTING -s 63.216.140.1/32 -j ACCEPT
-A PREROUTING -s 63.216.140.13/32 -j ACCEPT
-A PREROUTING -s 63.216.140.17/32 -j ACCEPT
-A PREROUTING -s 63.216.140.21/32 -j ACCEPT
-A PREROUTING -s 63.216.140.22/32 -j ACCEPT
-A PREROUTING -s 63.216.140.25/32 -j ACCEPT
-A PREROUTING -s 63.216.140.26/32 -j ACCEPT
-A PREROUTING -s 63.216.140.33/32 -j ACCEPT
-A PREROUTING -s 63.216.140.34/32 -j ACCEPT
-A PREROUTING -s 63.216.140.37/32 -j ACCEPT
-A PREROUTING -s 63.216.140.38/32 -j ACCEPT
-A PREROUTING -s 63.216.140.41/32 -j ACCEPT
-A PREROUTING -s 63.216.140.89/32 -j ACCEPT
-A PREROUTING -s 63.216.140.90/32 -j ACCEPT
-A PREROUTING -s 63.216.140.169/32 -j ACCEPT
-A PREROUTING -s 63.216.140.173/32 -j ACCEPT
-A PREROUTING -s 63.216.140.174/32 -j ACCEPT
-A PREROUTING -s 63.216.140.177/32 -j ACCEPT
-A PREROUTING -s 63.216.140.178/32 -j ACCEPT
-A PREROUTING -s 63.216.140.181/32 -j ACCEPT
-A PREROUTING -s 63.216.140.182/32 -j ACCEPT
-A PREROUTING -s 63.216.140.185/32 -j ACCEPT
-A PREROUTING -s 63.216.140.186/32 -j ACCEPT
-A PREROUTING -s 63.216.140.189/32 -j ACCEPT
-A PREROUTING -s 63.216.140.190/32 -j ACCEPT
-A PREROUTING -s 63.216.140.193/32 -j ACCEPT
-A PREROUTING -s 63.216.140.194/32 -j ACCEPT
-A PREROUTING -s 63.216.140.197/32 -j ACCEPT
-A PREROUTING -s 63.216.140.198/32 -j ACCEPT
-A PREROUTING -s 63.216.140.201/32 -j ACCEPT
-A PREROUTING -s 63.216.140.202/32 -j ACCEPT
-A PREROUTING -s 63.216.140.205/32 -j ACCEPT
-A PREROUTING -s 63.216.140.206/32 -j ACCEPT
-A PREROUTING -s 63.216.140.209/32 -j ACCEPT
-A PREROUTING -s 63.216.140.210/32 -j ACCEPT
-A PREROUTING -s 63.216.140.213/32 -j ACCEPT
-A PREROUTING -s 63.216.140.214/32 -j ACCEPT
-A PREROUTING -s 63.216.140.217/32 -j ACCEPT
-A PREROUTING -s 63.216.140.218/32 -j ACCEPT
-A PREROUTING -s 63.216.140.221/32 -j ACCEPT
-A PREROUTING -s 63.216.140.222/32 -j ACCEPT
-A PREROUTING -s 63.216.140.233/32 -j ACCEPT
-A PREROUTING -s 63.216.140.234/32 -j ACCEPT
-A PREROUTING -s 63.216.140.237/32 -j ACCEPT
-A PREROUTING -s 63.216.140.238/32 -j ACCEPT
-A PREROUTING -s 63.216.140.244/30 -j ACCEPT
-A PREROUTING -s 63.216.164.217/32 -j ACCEPT
-A PREROUTING -s 63.218.148.2/31 -j ACCEPT
-A PREROUTING -s 63.218.148.4/31 -j ACCEPT
-A PREROUTING -s 63.218.148.6/32 -j ACCEPT
-A PREROUTING -s 63.218.148.11/32 -j ACCEPT
-A PREROUTING -s 63.218.148.12/31 -j ACCEPT
-A PREROUTING -s 63.218.148.14/32 -j ACCEPT
-A PREROUTING -s 63.218.148.17/32 -j ACCEPT
-A PREROUTING -s 63.218.148.18/32 -j ACCEPT
-A PREROUTING -s 63.218.148.22/32 -j ACCEPT
-A PREROUTING -s 63.218.148.29/32 -j ACCEPT
-A PREROUTING -s 63.218.148.33/32 -j ACCEPT
-A PREROUTING -s 63.218.148.37/32 -j ACCEPT
-A PREROUTING -s 63.218.148.41/32 -j ACCEPT
-A PREROUTING -s 63.218.148.45/32 -j ACCEPT
-A PREROUTING -s 63.218.148.49/32 -j ACCEPT
-A PREROUTING -s 63.218.148.53/32 -j ACCEPT
-A PREROUTING -s 63.218.148.57/32 -j ACCEPT
-A PREROUTING -s 63.218.148.61/32 -j ACCEPT
-A PREROUTING -s 63.218.148.65/32 -j ACCEPT
-A PREROUTING -s 63.218.148.69/32 -j ACCEPT
-A PREROUTING -s 63.218.148.74/32 -j ACCEPT
-A PREROUTING -s 63.218.148.90/32 -j ACCEPT
-A PREROUTING -s 63.218.148.94/32 -j ACCEPT
-A PREROUTING -s 63.218.148.101/32 -j ACCEPT
-A PREROUTING -s 63.218.148.102/32 -j ACCEPT
-A PREROUTING -s 63.218.148.106/32 -j ACCEPT
-A PREROUTING -s 63.218.148.118/32 -j ACCEPT
-A PREROUTING -s 63.218.148.122/32 -j ACCEPT
-A PREROUTING -s 63.218.148.125/32 -j ACCEPT
-A PREROUTING -s 63.218.148.129/32 -j ACCEPT
-A PREROUTING -s 63.218.148.141/32 -j ACCEPT
-A PREROUTING -s 63.218.148.145/32 -j ACCEPT
-A PREROUTING -s 63.218.148.153/32 -j ACCEPT
-A PREROUTING -s 63.218.148.157/32 -j ACCEPT
-A PREROUTING -s 63.218.148.166/32 -j ACCEPT
-A PREROUTING -s 63.218.148.169/32 -j ACCEPT
-A PREROUTING -s 63.218.148.170/32 -j ACCEPT
-A PREROUTING -s 63.218.148.174/32 -j ACCEPT
-A PREROUTING -s 63.218.148.177/32 -j ACCEPT
-A PREROUTING -s 63.218.148.178/32 -j ACCEPT
-A PREROUTING -s 63.218.148.181/32 -j ACCEPT
-A PREROUTING -s 63.218.148.182/32 -j ACCEPT
-A PREROUTING -s 63.218.148.185/32 -j ACCEPT
-A PREROUTING -s 63.218.148.186/32 -j ACCEPT
-A PREROUTING -s 63.218.148.189/32 -j ACCEPT
-A PREROUTING -s 63.218.148.190/32 -j ACCEPT
-A PREROUTING -s 63.218.148.193/32 -j ACCEPT
-A PREROUTING -s 63.218.148.194/32 -j ACCEPT
-A PREROUTING -s 63.218.148.197/32 -j ACCEPT
-A PREROUTING -s 63.218.148.198/32 -j ACCEPT
-A PREROUTING -s 63.218.148.201/32 -j ACCEPT
-A PREROUTING -s 63.218.148.202/32 -j ACCEPT
-A PREROUTING -s 63.218.148.205/32 -j ACCEPT
-A PREROUTING -s 63.218.148.206/32 -j ACCEPT
-A PREROUTING -s 63.218.148.209/32 -j ACCEPT
-A PREROUTING -s 63.218.148.210/32 -j ACCEPT
-A PREROUTING -s 63.218.148.213/32 -j ACCEPT
-A PREROUTING -s 63.218.148.214/32 -j ACCEPT
-A PREROUTING -s 63.218.148.217/32 -j ACCEPT
-A PREROUTING -s 63.218.148.218/32 -j ACCEPT
-A PREROUTING -s 63.218.148.221/32 -j ACCEPT
-A PREROUTING -s 63.218.148.222/32 -j ACCEPT
-A PREROUTING -s 63.218.148.225/32 -j ACCEPT
-A PREROUTING -s 63.218.148.226/32 -j ACCEPT
-A PREROUTING -s 63.218.148.229/32 -j ACCEPT
-A PREROUTING -s 63.218.148.230/32 -j ACCEPT
-A PREROUTING -s 63.218.148.233/32 -j ACCEPT
-A PREROUTING -s 63.218.148.234/32 -j ACCEPT
-A PREROUTING -s 63.218.148.237/32 -j ACCEPT
-A PREROUTING -s 63.218.148.238/32 -j ACCEPT
-A PREROUTING -s 63.218.148.241/32 -j ACCEPT
-A PREROUTING -s 63.218.148.242/32 -j ACCEPT
-A PREROUTING -s 63.218.148.245/32 -j ACCEPT
-A PREROUTING -s 63.218.148.246/32 -j ACCEPT
-A PREROUTING -s 63.218.148.249/32 -j ACCEPT
-A PREROUTING -s 63.218.148.250/32 -j ACCEPT
-A PREROUTING -s 63.218.148.253/32 -j ACCEPT
-A PREROUTING -s 63.218.148.254/32 -j ACCEPT
-A PREROUTING -s 63.218.149.0/24 -j ACCEPT
-A PREROUTING -s 63.218.236.7/32 -j ACCEPT
-A PREROUTING -s 63.218.236.8/30 -j ACCEPT
-A PREROUTING -s 63.218.236.25/32 -j ACCEPT
-A PREROUTING -s 63.218.236.26/32 -j ACCEPT
-A PREROUTING -s 63.218.236.29/32 -j ACCEPT
-A PREROUTING -s 63.218.236.30/32 -j ACCEPT
-A PREROUTING -s 63.218.236.33/32 -j ACCEPT
-A PREROUTING -s 63.218.236.37/32 -j ACCEPT
-A PREROUTING -s 63.218.236.38/32 -j ACCEPT
-A PREROUTING -s 63.218.236.41/32 -j ACCEPT
-A PREROUTING -s 63.218.236.42/32 -j ACCEPT
-A PREROUTING -s 63.218.236.45/32 -j ACCEPT
-A PREROUTING -s 63.218.236.46/32 -j ACCEPT
-A PREROUTING -s 63.218.236.49/32 -j ACCEPT
-A PREROUTING -s 63.218.236.50/32 -j ACCEPT
-A PREROUTING -s 63.218.236.53/32 -j ACCEPT
-A PREROUTING -s 63.218.236.54/32 -j ACCEPT
-A PREROUTING -s 63.218.236.57/32 -j ACCEPT
-A PREROUTING -s 63.218.236.58/32 -j ACCEPT
-A PREROUTING -s 63.218.236.61/32 -j ACCEPT
-A PREROUTING -s 63.218.236.65/32 -j ACCEPT
-A PREROUTING -s 63.218.236.66/32 -j ACCEPT
-A PREROUTING -s 63.218.236.69/32 -j ACCEPT
-A PREROUTING -s 63.218.236.70/32 -j ACCEPT
-A PREROUTING -s 63.218.236.73/32 -j ACCEPT
-A PREROUTING -s 63.218.236.74/32 -j ACCEPT
-A PREROUTING -s 63.218.236.77/32 -j ACCEPT
-A PREROUTING -s 63.218.236.78/32 -j ACCEPT
-A PREROUTING -s 63.218.236.81/32 -j ACCEPT
-A PREROUTING -s 63.218.236.82/32 -j ACCEPT
-A PREROUTING -s 63.218.236.85/32 -j ACCEPT
-A PREROUTING -s 63.218.236.86/32 -j ACCEPT
-A PREROUTING -s 63.218.237.0/24 -j ACCEPT
-A PREROUTING -s 63.223.129.7/32 -j ACCEPT
-A PREROUTING -s 63.223.129.8/32 -j ACCEPT
-A PREROUTING -s 63.223.129.17/32 -j ACCEPT
-A PREROUTING -s 63.223.129.18/32 -j ACCEPT
-A PREROUTING -s 63.223.129.21/32 -j ACCEPT
-A PREROUTING -s 63.223.129.22/32 -j ACCEPT
-A PREROUTING -s 63.223.129.25/32 -j ACCEPT
-A PREROUTING -s 63.223.129.26/32 -j ACCEPT
-A PREROUTING -s 63.223.129.29/32 -j ACCEPT
-A PREROUTING -s 63.223.129.30/32 -j ACCEPT
-A PREROUTING -s 63.223.129.33/32 -j ACCEPT
-A PREROUTING -s 63.223.129.34/32 -j ACCEPT
-A PREROUTING -s 63.223.129.37/32 -j ACCEPT
-A PREROUTING -s 63.223.129.41/32 -j ACCEPT
-A PREROUTING -s 63.223.129.42/32 -j ACCEPT
-A PREROUTING -s 63.223.129.45/32 -j ACCEPT
-A PREROUTING -s 63.223.129.46/32 -j ACCEPT
-A PREROUTING -s 63.223.129.65/32 -j ACCEPT
-A PREROUTING -s 63.223.129.66/32 -j ACCEPT
-A PREROUTING -s 63.223.129.69/32 -j ACCEPT
-A PREROUTING -s 63.223.129.70/32 -j ACCEPT
-A PREROUTING -s 63.223.129.73/32 -j ACCEPT
-A PREROUTING -s 63.223.129.74/32 -j ACCEPT
-A PREROUTING -s 63.232.184.141/32 -j ACCEPT
-A PREROUTING -s 63.232.184.181/32 -j ACCEPT
-A PREROUTING -s 63.232.184.185/32 -j ACCEPT
-A PREROUTING -s 63.232.184.229/32 -j ACCEPT
-A PREROUTING -s 63.232.184.233/32 -j ACCEPT
-A PREROUTING -s 63.232.184.237/32 -j ACCEPT
-A PREROUTING -s 64.23.64.0/20 -j ACCEPT
-A PREROUTING -s 64.62.136.16/28 -j ACCEPT
-A PREROUTING -s 64.62.146.0/32 -j ACCEPT
-A PREROUTING -s 64.62.146.2/31 -j ACCEPT
-A PREROUTING -s 64.62.146.4/30 -j ACCEPT
-A PREROUTING -s 64.62.146.8/29 -j ACCEPT
-A PREROUTING -s 64.62.146.16/28 -j ACCEPT
-A PREROUTING -s 64.188.32.0/20 -j ACCEPT
-A PREROUTING -s 64.235.252.248/30 -j ACCEPT
-A PREROUTING -s 64.235.254.88/29 -j ACCEPT
-A PREROUTING -s 65.49.108.64/27 -j ACCEPT
-A PREROUTING -s 65.49.109.150/32 -j ACCEPT
-A PREROUTING -s 65.55.88.0/27 -j ACCEPT
-A PREROUTING -s 65.161.178.180/32 -j ACCEPT
-A PREROUTING -s 65.229.126.0/23 -j ACCEPT
-A PREROUTING -s 66.150.247.64/26 -j ACCEPT
-A PREROUTING -s 66.220.12.64/32 -j ACCEPT
-A PREROUTING -s 66.220.12.66/31 -j ACCEPT
-A PREROUTING -s 66.220.12.68/30 -j ACCEPT
-A PREROUTING -s 66.220.12.72/29 -j ACCEPT
-A PREROUTING -s 66.220.12.80/28 -j ACCEPT
-A PREROUTING -s 66.220.12.96/27 -j ACCEPT
-A PREROUTING -s 67.14.18.154/32 -j ACCEPT
-A PREROUTING -s 67.14.18.158/32 -j ACCEPT
-A PREROUTING -s 67.14.18.162/32 -j ACCEPT
-A PREROUTING -s 67.14.18.166/32 -j ACCEPT
-A PREROUTING -s 67.14.18.169/32 -j ACCEPT
-A PREROUTING -s 67.14.18.170/32 -j ACCEPT
-A PREROUTING -s 67.14.18.173/32 -j ACCEPT
-A PREROUTING -s 67.14.18.174/32 -j ACCEPT
-A PREROUTING -s 67.14.18.177/32 -j ACCEPT
-A PREROUTING -s 67.14.18.181/32 -j ACCEPT
-A PREROUTING -s 67.14.18.182/32 -j ACCEPT
-A PREROUTING -s 67.14.18.185/32 -j ACCEPT
-A PREROUTING -s 67.14.18.189/32 -j ACCEPT
-A PREROUTING -s 67.14.18.190/32 -j ACCEPT
-A PREROUTING -s 67.14.18.197/32 -j ACCEPT
-A PREROUTING -s 67.14.18.198/32 -j ACCEPT
-A PREROUTING -s 67.14.114.69/32 -j ACCEPT
-A PREROUTING -s 67.14.114.70/32 -j ACCEPT
-A PREROUTING -s 67.16.130.25/32 -j ACCEPT
-A PREROUTING -s 67.16.130.26/32 -j ACCEPT
-A PREROUTING -s 67.16.131.162/32 -j ACCEPT
-A PREROUTING -s 67.16.131.164/32 -j ACCEPT
-A PREROUTING -s 67.16.158.157/32 -j ACCEPT
-A PREROUTING -s 67.16.158.158/32 -j ACCEPT
-A PREROUTING -s 67.16.158.161/32 -j ACCEPT
-A PREROUTING -s 67.16.158.162/31 -j ACCEPT
-A PREROUTING -s 67.16.158.170/32 -j ACCEPT
-A PREROUTING -s 67.16.158.174/32 -j ACCEPT
-A PREROUTING -s 67.16.172.60/32 -j ACCEPT
-A PREROUTING -s 67.17.82.50/32 -j ACCEPT
-A PREROUTING -s 67.17.100.67/32 -j ACCEPT
-A PREROUTING -s 67.17.103.77/32 -j ACCEPT
-A PREROUTING -s 67.17.103.78/32 -j ACCEPT
-A PREROUTING -s 67.17.103.81/32 -j ACCEPT
-A PREROUTING -s 67.17.103.82/32 -j ACCEPT
-A PREROUTING -s 68.142.80.17/32 -j ACCEPT
-A PREROUTING -s 68.142.80.18/31 -j ACCEPT
-A PREROUTING -s 68.142.80.20/32 -j ACCEPT
-A PREROUTING -s 68.142.80.22/32 -j ACCEPT
-A PREROUTING -s 69.25.105.160/28 -j ACCEPT
-A PREROUTING -s 70.132.53.0/24 -j ACCEPT
-A PREROUTING -s 71.152.41.0/24 -j ACCEPT
-A PREROUTING -s 71.152.127.0/24 -j ACCEPT
-A PREROUTING -s 72.14.230.32/29 -j ACCEPT
-A PREROUTING -s 72.14.231.32/29 -j ACCEPT
-A PREROUTING -s 72.246.103.0/24 -j ACCEPT
-A PREROUTING -s 74.82.46.32/30 -j ACCEPT
-A PREROUTING -s 74.82.46.88/30 -j ACCEPT
-A PREROUTING -s 74.119.77.173/32 -j ACCEPT
-A PREROUTING -s 77.77.181.0/24 -j ACCEPT
-A PREROUTING -s 80.67.78.0/23 -j ACCEPT
-A PREROUTING -s 80.77.0.161/32 -j ACCEPT
-A PREROUTING -s 81.171.87.0/24 -j ACCEPT
-A PREROUTING -s 82.146.16.0/24 -j ACCEPT
-A PREROUTING -s 82.205.152.0/29 -j ACCEPT
-A PREROUTING -s 82.205.164.0/24 -j ACCEPT
-A PREROUTING -s 85.95.26.246/32 -j ACCEPT
-A PREROUTING -s 85.95.27.94/32 -j ACCEPT
-A PREROUTING -s 85.95.27.117/32 -j ACCEPT
-A PREROUTING -s 87.245.224.238/32 -j ACCEPT
-A PREROUTING -s 87.245.225.238/32 -j ACCEPT
-A PREROUTING -s 87.245.233.49/32 -j ACCEPT
-A PREROUTING -s 89.149.154.64/29 -j ACCEPT
-A PREROUTING -s 91.194.204.0/23 -j ACCEPT
-A PREROUTING -s 91.204.224.0/22 -j ACCEPT
-A PREROUTING -s 92.38.134.0/23 -j ACCEPT
-A PREROUTING -s 92.38.160.0/23 -j ACCEPT
-A PREROUTING -s 92.38.164.0/22 -j ACCEPT
-A PREROUTING -s 92.223.61.0/24 -j ACCEPT
-A PREROUTING -s 92.223.73.0/24 -j ACCEPT
-A PREROUTING -s 95.140.234.69/32 -j ACCEPT
-A PREROUTING -s 95.140.234.86/32 -j ACCEPT
-A PREROUTING -s 96.16.99.0/24 -j ACCEPT
-A PREROUTING -s 96.17.150.0/24 -j ACCEPT
-A PREROUTING -s 96.17.194.0/24 -j ACCEPT
-A PREROUTING -s 98.124.140.160/29 -j ACCEPT
-A PREROUTING -s 99.77.141.0/24 -j ACCEPT
-A PREROUTING -s 99.78.184.0/21 -j ACCEPT
-A PREROUTING -s 99.82.168.0/24 -j ACCEPT
-A PREROUTING -s 99.86.144.0/21 -j ACCEPT
-A PREROUTING -s 99.86.152.0/24 -j ACCEPT
-A PREROUTING -s 99.86.201.0/24 -j ACCEPT
-A PREROUTING -s 99.86.202.0/23 -j ACCEPT
-A PREROUTING -s 99.86.204.0/22 -j ACCEPT
-A PREROUTING -s 101.1.8.0/21 -j ACCEPT
-A PREROUTING -s 101.1.32.0/19 -j ACCEPT
-A PREROUTING -s 101.53.64.0/19 -j ACCEPT
-A PREROUTING -s 101.55.0.0/17 -j ACCEPT
-A PREROUTING -s 101.79.0.0/16 -j ACCEPT
-A PREROUTING -s 101.101.128.0/17 -j ACCEPT
-A PREROUTING -s 101.202.0.0/16 -j ACCEPT
-A PREROUTING -s 101.235.0.0/16 -j ACCEPT
-A PREROUTING -s 101.250.0.0/16 -j ACCEPT
-A PREROUTING -s 103.2.76.0/22 -j ACCEPT
-A PREROUTING -s 103.2.84.0/22 -j ACCEPT
-A PREROUTING -s 103.2.92.0/22 -j ACCEPT
-A PREROUTING -s 103.3.36.0/22 -j ACCEPT
-A PREROUTING -s 103.4.48.0/22 -j ACCEPT
-A PREROUTING -s 103.4.148.0/22 -j ACCEPT
-A PREROUTING -s 103.4.176.0/21 -j ACCEPT
-A PREROUTING -s 103.5.128.0/22 -j ACCEPT
-A PREROUTING -s 103.5.144.0/22 -j ACCEPT
-A PREROUTING -s 103.6.72.0/22 -j ACCEPT
-A PREROUTING -s 103.6.80.0/22 -j ACCEPT
-A PREROUTING -s 103.6.100.0/22 -j ACCEPT
-A PREROUTING -s 103.6.172.0/22 -j ACCEPT
-A PREROUTING -s 103.7.32.0/22 -j ACCEPT
-A PREROUTING -s 103.7.190.0/23 -j ACCEPT
-A PREROUTING -s 103.7.244.0/22 -j ACCEPT
-A PREROUTING -s 103.8.100.0/22 -j ACCEPT
-A PREROUTING -s 103.8.230.0/24 -j ACCEPT
-A PREROUTING -s 103.9.32.0/22 -j ACCEPT
-A PREROUTING -s 103.9.128.0/22 -j ACCEPT
-A PREROUTING -s 103.9.176.0/22 -j ACCEPT
-A PREROUTING -s 103.10.92.0/22 -j ACCEPT
-A PREROUTING -s 103.10.216.0/22 -j ACCEPT
-A PREROUTING -s 103.11.24.0/22 -j ACCEPT
-A PREROUTING -s 103.11.44.0/22 -j ACCEPT
-A PREROUTING -s 103.11.56.0/22 -j ACCEPT
-A PREROUTING -s 103.11.128.0/22 -j ACCEPT
-A PREROUTING -s 103.11.248.0/22 -j ACCEPT
-A PREROUTING -s 103.12.248.0/21 -j ACCEPT
-A PREROUTING -s 103.13.52.0/22 -j ACCEPT
-A PREROUTING -s 103.13.160.0/22 -j ACCEPT
-A PREROUTING -s 103.13.220.0/22 -j ACCEPT
-A PREROUTING -s 103.14.77.0/24 -j ACCEPT
-A PREROUTING -s 103.17.94.0/24 -j ACCEPT
-A PREROUTING -s 103.17.199.128/25 -j ACCEPT
-A PREROUTING -s 103.19.124.0/22 -j ACCEPT
-A PREROUTING -s 103.20.58.0/24 -j ACCEPT
-A PREROUTING -s 103.20.116.0/22 -j ACCEPT
-A PREROUTING -s 103.21.200.0/22 -j ACCEPT
-A PREROUTING -s 103.22.220.0/22 -j ACCEPT
-A PREROUTING -s 103.23.80.0/21 -j ACCEPT
-A PREROUTING -s 103.23.169.65/32 -j ACCEPT
-A PREROUTING -s 103.23.169.126/32 -j ACCEPT
-A PREROUTING -s 103.24.8.0/22 -j ACCEPT
-A PREROUTING -s 103.25.16.0/22 -j ACCEPT
-A PREROUTING -s 103.27.128.0/22 -j ACCEPT
-A PREROUTING -s 103.27.148.0/22 -j ACCEPT
-A PREROUTING -s 103.28.60.0/22 -j ACCEPT
-A PREROUTING -s 103.28.64.0/22 -j ACCEPT
-A PREROUTING -s 103.30.108.0/22 -j ACCEPT
-A PREROUTING -s 103.30.156.0/22 -j ACCEPT
-A PREROUTING -s 103.30.160.0/22 -j ACCEPT
-A PREROUTING -s 103.30.204.0/22 -j ACCEPT
-A PREROUTING -s 103.31.180.0/22 -j ACCEPT
-A PREROUTING -s 103.38.24.0/22 -j ACCEPT
-A PREROUTING -s 103.39.36.0/22 -j ACCEPT
-A PREROUTING -s 103.42.184.0/22 -j ACCEPT
-A PREROUTING -s 103.43.64.0/24 -j ACCEPT
-A PREROUTING -s 103.43.120.0/22 -j ACCEPT
-A PREROUTING -s 103.46.141.0/26 -j ACCEPT
-A PREROUTING -s 103.46.141.64/27 -j ACCEPT
-A PREROUTING -s 103.46.141.96/28 -j ACCEPT
-A PREROUTING -s 103.46.141.112/29 -j ACCEPT
-A PREROUTING -s 103.46.141.120/30 -j ACCEPT
-A PREROUTING -s 103.46.141.124/31 -j ACCEPT
-A PREROUTING -s 103.49.44.0/22 -j ACCEPT
-A PREROUTING -s 103.50.40.0/22 -j ACCEPT
-A PREROUTING -s 103.51.168.0/21 -j ACCEPT
-A PREROUTING -s 103.51.176.0/22 -j ACCEPT
-A PREROUTING -s 103.51.184.0/21 -j ACCEPT
-A PREROUTING -s 103.51.192.0/21 -j ACCEPT
-A PREROUTING -s 103.51.200.0/22 -j ACCEPT
-A PREROUTING -s 103.51.240.0/20 -j ACCEPT
-A PREROUTING -s 103.52.200.0/22 -j ACCEPT
-A PREROUTING -s 103.53.114.0/24 -j ACCEPT
-A PREROUTING -s 103.54.72.0/22 -j ACCEPT
-A PREROUTING -s 103.55.35.0/24 -j ACCEPT
-A PREROUTING -s 103.55.188.0/22 -j ACCEPT
-A PREROUTING -s 103.57.60.0/22 -j ACCEPT
-A PREROUTING -s 103.59.156.0/22 -j ACCEPT
-A PREROUTING -s 103.60.120.0/21 -j ACCEPT
-A PREROUTING -s 103.60.192.0/22 -j ACCEPT
-A PREROUTING -s 103.62.228.0/22 -j ACCEPT
-A PREROUTING -s 103.65.180.0/22 -j ACCEPT
-A PREROUTING -s 103.66.31.0/24 -j ACCEPT
-A PREROUTING -s 103.66.188.0/22 -j ACCEPT
-A PREROUTING -s 103.66.192.0/22 -j ACCEPT
-A PREROUTING -s 103.68.96.0/22 -j ACCEPT
-A PREROUTING -s 103.68.110.0/24 -j ACCEPT
-A PREROUTING -s 103.68.148.0/22 -j ACCEPT
-A PREROUTING -s 103.68.152.0/22 -j ACCEPT
-A PREROUTING -s 103.71.136.0/22 -j ACCEPT
-A PREROUTING -s 103.74.0.0/22 -j ACCEPT
-A PREROUTING -s 103.77.84.0/22 -j ACCEPT
-A PREROUTING -s 103.78.132.0/23 -j ACCEPT
-A PREROUTING -s 103.79.132.0/22 -j ACCEPT
-A PREROUTING -s 103.80.132.0/22 -j ACCEPT
-A PREROUTING -s 103.82.141.0/24 -j ACCEPT
-A PREROUTING -s 103.82.142.0/23 -j ACCEPT
-A PREROUTING -s 103.85.80.0/22 -j ACCEPT
-A PREROUTING -s 103.86.44.0/22 -j ACCEPT
-A PREROUTING -s 103.87.116.0/22 -j ACCEPT
-A PREROUTING -s 103.90.209.0/24 -j ACCEPT
-A PREROUTING -s 103.90.244.0/22 -j ACCEPT
-A PREROUTING -s 103.99.86.0/24 -j ACCEPT
-A PREROUTING -s 103.99.208.0/23 -j ACCEPT
-A PREROUTING -s 103.99.210.0/24 -j ACCEPT
-A PREROUTING -s 103.101.188.0/24 -j ACCEPT
-A PREROUTING -s 103.101.190.0/23 -j ACCEPT
-A PREROUTING -s 103.101.204.0/23 -j ACCEPT
-A PREROUTING -s 103.105.156.0/22 -j ACCEPT
-A PREROUTING -s 103.105.160.0/22 -j ACCEPT
-A PREROUTING -s 103.106.140.0/22 -j ACCEPT
-A PREROUTING -s 103.108.108.0/22 -j ACCEPT
-A PREROUTING -s 103.109.8.0/22 -j ACCEPT
-A PREROUTING -s 103.109.64.0/22 -j ACCEPT
-A PREROUTING -s 103.110.106.0/24 -j ACCEPT
-A PREROUTING -s 103.114.62.0/24 -j ACCEPT
-A PREROUTING -s 103.114.124.0/22 -j ACCEPT
-A PREROUTING -s 103.117.0.0/22 -j ACCEPT
-A PREROUTING -s 103.119.107.0/24 -j ACCEPT
-A PREROUTING -s 103.122.52.168/29 -j ACCEPT
-A PREROUTING -s 103.122.184.0/22 -j ACCEPT
-A PREROUTING -s 103.124.100.0/22 -j ACCEPT
-A PREROUTING -s 103.124.127.0/28 -j ACCEPT
-A PREROUTING -s 103.125.108.0/22 -j ACCEPT
-A PREROUTING -s 103.126.64.0/22 -j ACCEPT
-A PREROUTING -s 103.127.124.0/22 -j ACCEPT
-A PREROUTING -s 103.127.212.0/22 -j ACCEPT
-A PREROUTING -s 103.127.249.0/25 -j ACCEPT
-A PREROUTING -s 103.127.249.128/26 -j ACCEPT
-A PREROUTING -s 103.127.249.192/27 -j ACCEPT
-A PREROUTING -s 103.127.249.224/28 -j ACCEPT
-A PREROUTING -s 103.127.249.240/29 -j ACCEPT
-A PREROUTING -s 103.127.249.248/30 -j ACCEPT
-A PREROUTING -s 103.127.249.252/31 -j ACCEPT
-A PREROUTING -s 103.127.249.254/32 -j ACCEPT
-A PREROUTING -s 103.129.184.0/22 -j ACCEPT
-A PREROUTING -s 103.131.164.0/22 -j ACCEPT
-A PREROUTING -s 103.132.32.0/21 -j ACCEPT
-A PREROUTING -s 103.133.240.0/23 -j ACCEPT
-A PREROUTING -s 103.138.80.0/22 -j ACCEPT
-A PREROUTING -s 103.138.149.0/24 -j ACCEPT
-A PREROUTING -s 103.138.228.0/23 -j ACCEPT
-A PREROUTING -s 103.139.84.0/23 -j ACCEPT
-A PREROUTING -s 103.139.118.0/23 -j ACCEPT
-A PREROUTING -s 103.139.214.0/23 -j ACCEPT
-A PREROUTING -s 103.139.216.0/23 -j ACCEPT
-A PREROUTING -s 103.140.12.0/23 -j ACCEPT
-A PREROUTING -s 103.140.44.0/23 -j ACCEPT
-A PREROUTING -s 103.140.208.0/23 -j ACCEPT
-A PREROUTING -s 103.140.210.0/24 -j ACCEPT
-A PREROUTING -s 103.140.220.0/23 -j ACCEPT
-A PREROUTING -s 103.141.18.0/23 -j ACCEPT
-A PREROUTING -s 103.141.170.0/24 -j ACCEPT
-A PREROUTING -s 103.142.20.0/24 -j ACCEPT
-A PREROUTING -s 103.143.32.0/23 -j ACCEPT
-A PREROUTING -s 103.143.78.0/23 -j ACCEPT
-A PREROUTING -s 103.143.120.0/24 -j ACCEPT
-A PREROUTING -s 103.143.176.0/23 -j ACCEPT
-A PREROUTING -s 103.144.30.0/23 -j ACCEPT
-A PREROUTING -s 103.145.214.0/23 -j ACCEPT
-A PREROUTING -s 103.146.180.0/23 -j ACCEPT
-A PREROUTING -s 103.146.204.0/23 -j ACCEPT
-A PREROUTING -s 103.194.108.0/22 -j ACCEPT
-A PREROUTING -s 103.194.252.0/22 -j ACCEPT
-A PREROUTING -s 103.196.87.64/27 -j ACCEPT
-A PREROUTING -s 103.196.87.196/30 -j ACCEPT
-A PREROUTING -s 103.196.87.200/29 -j ACCEPT
-A PREROUTING -s 103.196.87.208/28 -j ACCEPT
-A PREROUTING -s 103.196.87.224/27 -j ACCEPT
-A PREROUTING -s 103.198.32.0/25 -j ACCEPT
-A PREROUTING -s 103.206.74.0/23 -j ACCEPT
-A PREROUTING -s 103.209.172.0/23 -j ACCEPT
-A PREROUTING -s 103.212.124.0/22 -j ACCEPT
-A PREROUTING -s 103.212.220.0/22 -j ACCEPT
-A PREROUTING -s 103.212.244.0/22 -j ACCEPT
-A PREROUTING -s 103.212.248.0/22 -j ACCEPT
-A PREROUTING -s 103.214.24.0/22 -j ACCEPT
-A PREROUTING -s 103.214.68.0/24 -j ACCEPT
-A PREROUTING -s 103.214.88.0/22 -j ACCEPT
-A PREROUTING -s 103.215.144.0/22 -j ACCEPT
-A PREROUTING -s 103.215.152.0/22 -j ACCEPT
-A PREROUTING -s 103.216.102.0/24 -j ACCEPT
-A PREROUTING -s 103.216.202.0/23 -j ACCEPT
-A PREROUTING -s 103.218.156.0/22 -j ACCEPT
-A PREROUTING -s 103.218.160.0/22 -j ACCEPT
-A PREROUTING -s 103.219.124.0/22 -j ACCEPT
-A PREROUTING -s 103.219.128.0/22 -j ACCEPT
-A PREROUTING -s 103.226.72.0/21 -j ACCEPT
-A PREROUTING -s 103.226.96.0/22 -j ACCEPT
-A PREROUTING -s 103.228.96.0/24 -j ACCEPT
-A PREROUTING -s 103.228.99.0/24 -j ACCEPT
-A PREROUTING -s 103.228.110.0/23 -j ACCEPT
-A PREROUTING -s 103.229.156.0/22 -j ACCEPT
-A PREROUTING -s 103.230.88.0/22 -j ACCEPT
-A PREROUTING -s 103.230.112.0/22 -j ACCEPT
-A PREROUTING -s 103.230.251.196/30 -j ACCEPT
-A PREROUTING -s 103.230.251.200/29 -j ACCEPT
-A PREROUTING -s 103.230.251.208/29 -j ACCEPT
-A PREROUTING -s 103.230.251.216/30 -j ACCEPT
-A PREROUTING -s 103.231.128.0/22 -j ACCEPT
-A PREROUTING -s 103.234.4.0/22 -j ACCEPT
-A PREROUTING -s 103.235.24.0/22 -j ACCEPT
-A PREROUTING -s 103.237.20.0/22 -j ACCEPT
-A PREROUTING -s 103.237.122.0/24 -j ACCEPT
-A PREROUTING -s 103.238.248.0/22 -j ACCEPT
-A PREROUTING -s 103.239.112.0/22 -j ACCEPT
-A PREROUTING -s 103.239.236.0/22 -j ACCEPT
-A PREROUTING -s 103.239.240.0/22 -j ACCEPT
-A PREROUTING -s 103.240.28.0/22 -j ACCEPT
-A PREROUTING -s 103.240.48.0/22 -j ACCEPT
-A PREROUTING -s 103.241.76.0/22 -j ACCEPT
-A PREROUTING -s 103.241.117.0/24 -j ACCEPT
-A PREROUTING -s 103.241.118.0/24 -j ACCEPT
-A PREROUTING -s 103.243.20.0/23 -j ACCEPT
-A PREROUTING -s 103.243.23.0/24 -j ACCEPT
-A PREROUTING -s 103.243.200.0/22 -j ACCEPT
-A PREROUTING -s 103.244.40.0/22 -j ACCEPT
-A PREROUTING -s 103.244.108.0/22 -j ACCEPT
-A PREROUTING -s 103.246.56.0/22 -j ACCEPT
-A PREROUTING -s 103.246.172.0/22 -j ACCEPT
-A PREROUTING -s 103.246.236.0/22 -j ACCEPT
-A PREROUTING -s 103.247.220.0/22 -j ACCEPT
-A PREROUTING -s 103.247.232.0/22 -j ACCEPT
-A PREROUTING -s 103.248.104.0/22 -j ACCEPT
-A PREROUTING -s 103.249.28.0/22 -j ACCEPT
-A PREROUTING -s 103.251.104.0/22 -j ACCEPT
-A PREROUTING -s 103.252.228.0/22 -j ACCEPT
-A PREROUTING -s 103.253.56.0/24 -j ACCEPT
-A PREROUTING -s 103.253.59.0/24 -j ACCEPT
-A PREROUTING -s 103.253.240.0/22 -j ACCEPT
-A PREROUTING -s 103.254.73.0/24 -j ACCEPT
-A PREROUTING -s 103.254.248.0/22 -j ACCEPT
-A PREROUTING -s 104.44.1.83/32 -j ACCEPT
-A PREROUTING -s 104.44.1.84/31 -j ACCEPT
-A PREROUTING -s 104.44.1.86/32 -j ACCEPT
-A PREROUTING -s 104.44.3.14/32 -j ACCEPT
-A PREROUTING -s 104.44.16.40/32 -j ACCEPT
-A PREROUTING -s 104.44.16.168/29 -j ACCEPT
-A PREROUTING -s 104.44.17.120/32 -j ACCEPT
-A PREROUTING -s 104.44.17.122/32 -j ACCEPT
-A PREROUTING -s 104.44.17.128/32 -j ACCEPT
-A PREROUTING -s 104.44.17.130/32 -j ACCEPT
-A PREROUTING -s 104.44.17.170/32 -j ACCEPT
-A PREROUTING -s 104.44.17.176/32 -j ACCEPT
-A PREROUTING -s 104.44.18.203/32 -j ACCEPT
-A PREROUTING -s 104.44.19.77/32 -j ACCEPT
-A PREROUTING -s 104.44.19.79/32 -j ACCEPT
-A PREROUTING -s 104.44.19.95/32 -j ACCEPT
-A PREROUTING -s 104.44.19.97/32 -j ACCEPT
-A PREROUTING -s 104.44.19.185/32 -j ACCEPT
-A PREROUTING -s 104.44.19.187/32 -j ACCEPT
-A PREROUTING -s 104.44.19.193/32 -j ACCEPT
-A PREROUTING -s 104.44.19.204/32 -j ACCEPT
-A PREROUTING -s 104.44.19.211/32 -j ACCEPT
-A PREROUTING -s 104.44.19.238/32 -j ACCEPT
-A PREROUTING -s 104.44.19.240/32 -j ACCEPT
-A PREROUTING -s 104.44.22.18/31 -j ACCEPT
-A PREROUTING -s 104.44.22.20/30 -j ACCEPT
-A PREROUTING -s 104.44.22.24/29 -j ACCEPT
-A PREROUTING -s 104.44.22.32/28 -j ACCEPT
-A PREROUTING -s 104.44.22.48/31 -j ACCEPT
-A PREROUTING -s 104.44.23.22/31 -j ACCEPT
-A PREROUTING -s 104.44.23.24/31 -j ACCEPT
-A PREROUTING -s 104.44.23.140/32 -j ACCEPT
-A PREROUTING -s 104.44.23.142/32 -j ACCEPT
-A PREROUTING -s 104.44.28.28/32 -j ACCEPT
-A PREROUTING -s 104.44.28.56/32 -j ACCEPT
-A PREROUTING -s 104.44.32.100/32 -j ACCEPT
-A PREROUTING -s 104.44.32.102/32 -j ACCEPT
-A PREROUTING -s 104.44.90.160/27 -j ACCEPT
-A PREROUTING -s 104.44.94.224/27 -j ACCEPT
-A PREROUTING -s 104.44.232.20/30 -j ACCEPT
-A PREROUTING -s 104.44.232.24/30 -j ACCEPT
-A PREROUTING -s 104.44.238.140/30 -j ACCEPT
-A PREROUTING -s 104.44.238.144/30 -j ACCEPT
-A PREROUTING -s 104.44.239.192/32 -j ACCEPT
-A PREROUTING -s 104.44.239.238/32 -j ACCEPT
-A PREROUTING -s 104.44.239.240/32 -j ACCEPT
-A PREROUTING -s 104.44.239.242/32 -j ACCEPT
-A PREROUTING -s 104.44.239.244/32 -j ACCEPT
-A PREROUTING -s 104.47.26.0/26 -j ACCEPT
-A PREROUTING -s 104.47.30.128/25 -j ACCEPT
-A PREROUTING -s 104.47.108.0/23 -j ACCEPT
-A PREROUTING -s 104.47.126.0/24 -j ACCEPT
-A PREROUTING -s 104.70.122.0/24 -j ACCEPT
-A PREROUTING -s 104.74.148.0/22 -j ACCEPT
-A PREROUTING -s 104.74.152.0/21 -j ACCEPT
-A PREROUTING -s 104.74.160.0/19 -j ACCEPT
-A PREROUTING -s 104.74.192.0/18 -j ACCEPT
-A PREROUTING -s 104.75.0.0/21 -j ACCEPT
-A PREROUTING -s 104.75.8.0/22 -j ACCEPT
-A PREROUTING -s 104.75.16.0/20 -j ACCEPT
-A PREROUTING -s 104.75.32.0/20 -j ACCEPT
-A PREROUTING -s 104.76.28.0/22 -j ACCEPT
-A PREROUTING -s 104.76.64.0/19 -j ACCEPT
-A PREROUTING -s 104.76.96.0/23 -j ACCEPT
-A PREROUTING -s 104.77.88.0/23 -j ACCEPT
-A PREROUTING -s 104.77.91.0/24 -j ACCEPT
-A PREROUTING -s 104.100.92.0/24 -j ACCEPT
-A PREROUTING -s 104.123.52.0/22 -j ACCEPT
-A PREROUTING -s 104.132.102.0/24 -j ACCEPT
-A PREROUTING -s 104.132.152.0/24 -j ACCEPT
-A PREROUTING -s 104.143.95.0/24 -j ACCEPT
-A PREROUTING -s 106.10.0.0/17 -j ACCEPT
-A PREROUTING -s 106.96.0.0/13 -j ACCEPT
-A PREROUTING -s 106.240.0.0/12 -j ACCEPT
-A PREROUTING -s 107.150.113.0/24 -j ACCEPT
-A PREROUTING -s 107.150.126.0/23 -j ACCEPT
-A PREROUTING -s 107.154.88.0/24 -j ACCEPT
-A PREROUTING -s 107.155.28.0/24 -j ACCEPT
-A PREROUTING -s 107.155.34.0/24 -j ACCEPT
-A PREROUTING -s 107.155.37.0/24 -j ACCEPT
-A PREROUTING -s 107.155.43.0/24 -j ACCEPT
-A PREROUTING -s 107.155.45.0/24 -j ACCEPT
-A PREROUTING -s 110.4.64.0/18 -j ACCEPT
-A PREROUTING -s 110.5.128.0/17 -j ACCEPT
-A PREROUTING -s 110.8.0.0/13 -j ACCEPT
-A PREROUTING -s 110.34.64.0/18 -j ACCEPT
-A PREROUTING -s 110.35.0.0/18 -j ACCEPT
-A PREROUTING -s 110.35.96.0/19 -j ACCEPT
-A PREROUTING -s 110.35.128.0/17 -j ACCEPT
-A PREROUTING -s 110.44.32.0/19 -j ACCEPT
-A PREROUTING -s 110.44.192.0/18 -j ACCEPT
-A PREROUTING -s 110.45.0.0/16 -j ACCEPT
-A PREROUTING -s 110.46.0.0/15 -j ACCEPT
-A PREROUTING -s 110.68.0.0/14 -j ACCEPT
-A PREROUTING -s 110.76.64.0/18 -j ACCEPT
-A PREROUTING -s 110.76.140.0/22 -j ACCEPT
-A PREROUTING -s 110.92.20.0/22 -j ACCEPT
-A PREROUTING -s 110.92.128.0/17 -j ACCEPT
-A PREROUTING -s 110.93.24.0/21 -j ACCEPT
-A PREROUTING -s 110.93.112.0/20 -j ACCEPT
-A PREROUTING -s 110.93.128.0/18 -j ACCEPT
-A PREROUTING -s 110.165.0.0/19 -j ACCEPT
-A PREROUTING -s 110.165.64.0/18 -j ACCEPT
-A PREROUTING -s 110.172.100.0/22 -j ACCEPT
-A PREROUTING -s 110.172.104.0/21 -j ACCEPT
-A PREROUTING -s 110.172.112.0/20 -j ACCEPT
-A PREROUTING -s 110.232.96.0/22 -j ACCEPT
-A PREROUTING -s 110.234.64.0/18 -j ACCEPT
-A PREROUTING -s 111.65.128.0/18 -j ACCEPT
-A PREROUTING -s 111.67.208.0/20 -j ACCEPT
-A PREROUTING -s 111.67.224.0/19 -j ACCEPT
-A PREROUTING -s 111.91.128.0/18 -j ACCEPT
-A PREROUTING -s 111.92.188.0/22 -j ACCEPT
-A PREROUTING -s 111.118.0.0/17 -j ACCEPT
-A PREROUTING -s 111.119.23.110/32 -j ACCEPT
-A PREROUTING -s 111.171.0.0/17 -j ACCEPT
-A PREROUTING -s 111.218.0.0/15 -j ACCEPT
-A PREROUTING -s 111.221.32.0/21 -j ACCEPT
-A PREROUTING -s 111.223.244.0/22 -j ACCEPT
-A PREROUTING -s 112.72.16.0/20 -j ACCEPT
-A PREROUTING -s 112.72.32.0/19 -j ACCEPT
-A PREROUTING -s 112.72.128.0/17 -j ACCEPT
-A PREROUTING -s 112.76.0.0/15 -j ACCEPT
-A PREROUTING -s 112.106.0.0/15 -j ACCEPT
-A PREROUTING -s 112.108.0.0/16 -j ACCEPT
-A PREROUTING -s 112.109.32.0/19 -j ACCEPT
-A PREROUTING -s 112.121.0.0/19 -j ACCEPT
-A PREROUTING -s 112.121.192.0/18 -j ACCEPT
-A PREROUTING -s 112.133.0.0/17 -j ACCEPT
-A PREROUTING -s 112.133.128.0/18 -j ACCEPT
-A PREROUTING -s 112.136.128.0/17 -j ACCEPT
-A PREROUTING -s 112.137.176.0/21 -j ACCEPT
-A PREROUTING -s 112.140.64.0/18 -j ACCEPT
-A PREROUTING -s 112.140.144.0/20 -j ACCEPT
-A PREROUTING -s 112.140.192.0/18 -j ACCEPT
-A PREROUTING -s 112.144.0.0/12 -j ACCEPT
-A PREROUTING -s 112.160.0.0/11 -j ACCEPT
-A PREROUTING -s 112.196.192.0/19 -j ACCEPT
-A PREROUTING -s 112.212.0.0/16 -j ACCEPT
-A PREROUTING -s 112.213.0.0/19 -j ACCEPT
-A PREROUTING -s 112.214.0.0/16 -j ACCEPT
-A PREROUTING -s 112.216.0.0/13 -j ACCEPT
-A PREROUTING -s 113.10.0.0/18 -j ACCEPT
-A PREROUTING -s 113.21.0.0/19 -j ACCEPT
-A PREROUTING -s 113.29.128.0/18 -j ACCEPT
-A PREROUTING -s 113.29.192.0/20 -j ACCEPT
-A PREROUTING -s 113.29.230.0/23 -j ACCEPT
-A PREROUTING -s 113.30.0.0/17 -j ACCEPT
-A PREROUTING -s 113.52.136.0/21 -j ACCEPT
-A PREROUTING -s 113.52.192.0/19 -j ACCEPT
-A PREROUTING -s 113.59.128.0/18 -j ACCEPT
-A PREROUTING -s 113.60.0.0/16 -j ACCEPT
-A PREROUTING -s 113.61.0.0/19 -j ACCEPT
-A PREROUTING -s 113.61.104.0/22 -j ACCEPT
-A PREROUTING -s 113.130.64.0/19 -j ACCEPT
-A PREROUTING -s 113.130.128.0/17 -j ACCEPT
-A PREROUTING -s 113.131.0.0/16 -j ACCEPT
-A PREROUTING -s 113.192.64.0/18 -j ACCEPT
-A PREROUTING -s 113.197.80.0/20 -j ACCEPT
-A PREROUTING -s 113.198.0.0/16 -j ACCEPT
-A PREROUTING -s 113.199.0.0/17 -j ACCEPT
-A PREROUTING -s 113.216.0.0/15 -j ACCEPT
-A PREROUTING -s 114.29.0.0/17 -j ACCEPT
-A PREROUTING -s 114.29.128.0/19 -j ACCEPT
-A PREROUTING -s 114.30.0.0/19 -j ACCEPT
-A PREROUTING -s 114.30.48.0/20 -j ACCEPT
-A PREROUTING -s 114.30.128.0/17 -j ACCEPT
-A PREROUTING -s 114.31.32.0/19 -j ACCEPT
-A PREROUTING -s 114.31.112.0/20 -j ACCEPT
-A PREROUTING -s 114.52.0.0/15 -j ACCEPT
-A PREROUTING -s 114.70.0.0/15 -j ACCEPT
-A PREROUTING -s 114.108.0.0/17 -j ACCEPT
-A PREROUTING -s 114.108.128.0/18 -j ACCEPT
-A PREROUTING -s 114.110.24.0/21 -j ACCEPT
-A PREROUTING -s 114.110.128.0/17 -j ACCEPT
-A PREROUTING -s 114.111.32.0/19 -j ACCEPT
-A PREROUTING -s 114.111.192.0/18 -j ACCEPT
-A PREROUTING -s 114.129.64.0/18 -j ACCEPT
-A PREROUTING -s 114.129.192.0/18 -j ACCEPT
-A PREROUTING -s 114.141.0.0/19 -j ACCEPT
-A PREROUTING -s 114.141.40.0/21 -j ACCEPT
-A PREROUTING -s 114.141.224.0/19 -j ACCEPT
-A PREROUTING -s 114.199.0.0/18 -j ACCEPT
-A PREROUTING -s 114.199.128.0/17 -j ACCEPT
-A PREROUTING -s 114.200.0.0/13 -j ACCEPT
-A PREROUTING -s 115.0.0.0/12 -j ACCEPT
-A PREROUTING -s 115.16.0.0/13 -j ACCEPT
-A PREROUTING -s 115.31.96.0/19 -j ACCEPT
-A PREROUTING -s 115.40.0.0/15 -j ACCEPT
-A PREROUTING -s 115.68.0.0/16 -j ACCEPT
-A PREROUTING -s 115.69.96.0/19 -j ACCEPT
-A PREROUTING -s 115.71.0.0/16 -j ACCEPT
-A PREROUTING -s 115.84.160.0/21 -j ACCEPT
-A PREROUTING -s 115.85.160.0/19 -j ACCEPT
-A PREROUTING -s 115.86.0.0/16 -j ACCEPT
-A PREROUTING -s 115.88.0.0/13 -j ACCEPT
-A PREROUTING -s 115.126.192.0/18 -j ACCEPT
-A PREROUTING -s 115.136.0.0/13 -j ACCEPT
-A PREROUTING -s 115.144.0.0/15 -j ACCEPT
-A PREROUTING -s 115.160.0.0/17 -j ACCEPT
-A PREROUTING -s 115.161.0.0/16 -j ACCEPT
-A PREROUTING -s 115.165.176.0/21 -j ACCEPT
-A PREROUTING -s 115.178.32.0/20 -j ACCEPT
-A PREROUTING -s 115.178.64.0/19 -j ACCEPT
-A PREROUTING -s 115.187.80.0/21 -j ACCEPT
-A PREROUTING -s 116.0.77.0/24 -j ACCEPT
-A PREROUTING -s 116.32.0.0/12 -j ACCEPT
-A PREROUTING -s 116.66.179.0/24 -j ACCEPT
-A PREROUTING -s 116.67.0.0/17 -j ACCEPT
-A PREROUTING -s 116.68.32.0/19 -j ACCEPT
-A PREROUTING -s 116.68.232.0/21 -j ACCEPT
-A PREROUTING -s 116.84.0.0/16 -j ACCEPT
-A PREROUTING -s 116.89.160.0/19 -j ACCEPT
-A PREROUTING -s 116.90.216.0/21 -j ACCEPT
-A PREROUTING -s 116.93.160.0/19 -j ACCEPT
-A PREROUTING -s 116.93.192.0/18 -j ACCEPT
-A PREROUTING -s 116.120.0.0/13 -j ACCEPT
-A PREROUTING -s 116.193.80.0/20 -j ACCEPT
-A PREROUTING -s 116.193.152.0/22 -j ACCEPT
-A PREROUTING -s 116.199.160.0/21 -j ACCEPT
-A PREROUTING -s 116.200.0.0/15 -j ACCEPT
-A PREROUTING -s 116.204.168.0/22 -j ACCEPT
-A PREROUTING -s 116.212.0.0/19 -j ACCEPT
-A PREROUTING -s 116.255.64.0/18 -j ACCEPT
-A PREROUTING -s 117.16.0.0/15 -j ACCEPT
-A PREROUTING -s 117.20.80.0/20 -j ACCEPT
-A PREROUTING -s 117.20.192.0/18 -j ACCEPT
-A PREROUTING -s 117.52.0.0/16 -j ACCEPT
-A PREROUTING -s 117.53.64.0/18 -j ACCEPT
-A PREROUTING -s 117.53.192.0/18 -j ACCEPT
-A PREROUTING -s 117.55.128.0/18 -j ACCEPT
-A PREROUTING -s 117.58.128.0/20 -j ACCEPT
-A PREROUTING -s 117.110.0.0/15 -j ACCEPT
-A PREROUTING -s 117.123.0.0/16 -j ACCEPT
-A PREROUTING -s 118.32.0.0/11 -j ACCEPT
-A PREROUTING -s 118.67.128.0/18 -j ACCEPT
-A PREROUTING -s 118.91.0.0/17 -j ACCEPT
-A PREROUTING -s 118.91.144.0/20 -j ACCEPT
-A PREROUTING -s 118.103.192.0/19 -j ACCEPT
-A PREROUTING -s 118.107.48.0/20 -j ACCEPT
-A PREROUTING -s 118.107.160.0/20 -j ACCEPT
-A PREROUTING -s 118.107.183.0/24 -j ACCEPT
-A PREROUTING -s 118.127.192.0/18 -j ACCEPT
-A PREROUTING -s 118.128.0.0/14 -j ACCEPT
-A PREROUTING -s 118.139.192.0/18 -j ACCEPT
-A PREROUTING -s 118.176.0.0/16 -j ACCEPT
-A PREROUTING -s 118.214.0.0/23 -j ACCEPT
-A PREROUTING -s 118.214.64.0/20 -j ACCEPT
-A PREROUTING -s 118.214.183.0/24 -j ACCEPT
-A PREROUTING -s 118.215.56.0/21 -j ACCEPT
-A PREROUTING -s 118.216.0.0/13 -j ACCEPT
-A PREROUTING -s 118.234.0.0/15 -j ACCEPT
-A PREROUTING -s 119.17.0.0/19 -j ACCEPT
-A PREROUTING -s 119.17.64.0/18 -j ACCEPT
-A PREROUTING -s 119.18.64.0/18 -j ACCEPT
-A PREROUTING -s 119.28.144.0/20 -j ACCEPT
-A PREROUTING -s 119.28.160.0/22 -j ACCEPT
-A PREROUTING -s 119.28.232.0/21 -j ACCEPT
-A PREROUTING -s 119.30.128.0/18 -j ACCEPT
-A PREROUTING -s 119.31.240.0/20 -j ACCEPT
-A PREROUTING -s 119.42.160.0/19 -j ACCEPT
-A PREROUTING -s 119.56.128.0/17 -j ACCEPT
-A PREROUTING -s 119.59.0.0/18 -j ACCEPT
-A PREROUTING -s 119.63.224.0/19 -j ACCEPT
-A PREROUTING -s 119.64.0.0/13 -j ACCEPT
-A PREROUTING -s 119.75.64.0/18 -j ACCEPT
-A PREROUTING -s 119.75.128.0/18 -j ACCEPT
-A PREROUTING -s 119.77.96.0/19 -j ACCEPT
-A PREROUTING -s 119.82.32.0/19 -j ACCEPT
-A PREROUTING -s 119.148.112.0/20 -j ACCEPT
-A PREROUTING -s 119.148.128.0/19 -j ACCEPT
-A PREROUTING -s 119.149.0.0/16 -j ACCEPT
-A PREROUTING -s 119.161.0.0/19 -j ACCEPT
-A PREROUTING -s 119.192.0.0/11 -j ACCEPT
-A PREROUTING -s 119.235.192.0/20 -j ACCEPT
-A PREROUTING -s 119.235.240.0/21 -j ACCEPT
-A PREROUTING -s 120.29.128.0/20 -j ACCEPT
-A PREROUTING -s 120.50.64.0/18 -j ACCEPT
-A PREROUTING -s 120.50.128.0/19 -j ACCEPT
-A PREROUTING -s 120.73.0.0/16 -j ACCEPT
-A PREROUTING -s 120.136.64.0/18 -j ACCEPT
-A PREROUTING -s 120.138.52.8/32 -j ACCEPT
-A PREROUTING -s 120.142.0.0/16 -j ACCEPT
-A PREROUTING -s 120.143.160.0/19 -j ACCEPT
-A PREROUTING -s 120.143.192.0/18 -j ACCEPT
-A PREROUTING -s 121.0.64.0/18 -j ACCEPT
-A PREROUTING -s 121.0.128.0/17 -j ACCEPT
-A PREROUTING -s 121.1.64.0/18 -j ACCEPT
-A PREROUTING -s 121.50.16.0/20 -j ACCEPT
-A PREROUTING -s 121.50.64.0/18 -j ACCEPT
-A PREROUTING -s 121.50.224.0/19 -j ACCEPT
-A PREROUTING -s 121.53.0.0/16 -j ACCEPT
-A PREROUTING -s 121.54.192.0/18 -j ACCEPT
-A PREROUTING -s 121.55.64.0/18 -j ACCEPT
-A PREROUTING -s 121.55.128.0/18 -j ACCEPT
-A PREROUTING -s 121.64.0.0/14 -j ACCEPT
-A PREROUTING -s 121.78.0.0/16 -j ACCEPT
-A PREROUTING -s 121.88.0.0/16 -j ACCEPT
-A PREROUTING -s 121.100.64.0/18 -j ACCEPT
-A PREROUTING -s 121.101.192.0/20 -j ACCEPT
-A PREROUTING -s 121.101.224.0/19 -j ACCEPT
-A PREROUTING -s 121.124.0.0/15 -j ACCEPT
-A PREROUTING -s 121.126.0.0/16 -j ACCEPT
-A PREROUTING -s 121.127.64.0/18 -j ACCEPT
-A PREROUTING -s 121.127.128.0/18 -j ACCEPT
-A PREROUTING -s 121.128.0.0/10 -j ACCEPT
-A PREROUTING -s 121.200.64.0/18 -j ACCEPT
-A PREROUTING -s 121.252.0.0/15 -j ACCEPT
-A PREROUTING -s 121.254.0.0/18 -j ACCEPT
-A PREROUTING -s 121.254.128.0/17 -j ACCEPT
-A PREROUTING -s 122.0.8.0/21 -j ACCEPT
-A PREROUTING -s 122.0.32.0/19 -j ACCEPT
-A PREROUTING -s 122.10.64.0/20 -j ACCEPT
-A PREROUTING -s 122.32.0.0/12 -j ACCEPT
-A PREROUTING -s 122.49.64.0/18 -j ACCEPT
-A PREROUTING -s 122.99.128.0/17 -j ACCEPT
-A PREROUTING -s 122.101.0.0/16 -j ACCEPT
-A PREROUTING -s 122.128.32.0/19 -j ACCEPT
-A PREROUTING -s 122.128.64.0/20 -j ACCEPT
-A PREROUTING -s 122.128.128.0/17 -j ACCEPT
-A PREROUTING -s 122.129.208.0/21 -j ACCEPT
-A PREROUTING -s 122.129.240.0/20 -j ACCEPT
-A PREROUTING -s 122.152.96.0/19 -j ACCEPT
-A PREROUTING -s 122.153.0.0/16 -j ACCEPT
-A PREROUTING -s 122.199.64.0/18 -j ACCEPT
-A PREROUTING -s 122.199.128.0/17 -j ACCEPT
-A PREROUTING -s 122.202.32.0/19 -j ACCEPT
-A PREROUTING -s 122.202.128.0/17 -j ACCEPT
-A PREROUTING -s 122.203.0.0/16 -j ACCEPT
-A PREROUTING -s 122.248.170.0/28 -j ACCEPT
-A PREROUTING -s 122.248.170.16/29 -j ACCEPT
-A PREROUTING -s 122.248.170.32/27 -j ACCEPT
-A PREROUTING -s 122.248.170.64/27 -j ACCEPT
-A PREROUTING -s 122.248.170.160/27 -j ACCEPT
-A PREROUTING -s 122.248.170.192/27 -j ACCEPT
-A PREROUTING -s 122.252.64.0/18 -j ACCEPT
-A PREROUTING -s 122.252.192.0/19 -j ACCEPT
-A PREROUTING -s 122.254.128.0/17 -j ACCEPT
-A PREROUTING -s 123.0.0.0/20 -j ACCEPT
-A PREROUTING -s 123.32.0.0/12 -j ACCEPT
-A PREROUTING -s 123.98.160.0/19 -j ACCEPT
-A PREROUTING -s 123.98.192.0/19 -j ACCEPT
-A PREROUTING -s 123.99.64.0/18 -j ACCEPT
-A PREROUTING -s 123.100.160.0/19 -j ACCEPT
-A PREROUTING -s 123.108.16.0/20 -j ACCEPT
-A PREROUTING -s 123.108.160.0/19 -j ACCEPT
-A PREROUTING -s 123.109.0.0/16 -j ACCEPT
-A PREROUTING -s 123.111.0.0/16 -j ACCEPT
-A PREROUTING -s 123.140.0.0/14 -j ACCEPT
-A PREROUTING -s 123.199.0.0/17 -j ACCEPT
-A PREROUTING -s 123.200.64.0/18 -j ACCEPT
-A PREROUTING -s 123.212.0.0/14 -j ACCEPT
-A PREROUTING -s 123.228.0.0/15 -j ACCEPT
-A PREROUTING -s 123.248.0.0/16 -j ACCEPT
-A PREROUTING -s 123.250.0.0/15 -j ACCEPT
-A PREROUTING -s 123.253.172.0/22 -j ACCEPT
-A PREROUTING -s 123.254.64.0/19 -j ACCEPT
-A PREROUTING -s 123.254.128.0/17 -j ACCEPT
-A PREROUTING -s 124.0.0.0/14 -j ACCEPT
-A PREROUTING -s 124.5.0.0/16 -j ACCEPT
-A PREROUTING -s 124.28.0.0/17 -j ACCEPT
-A PREROUTING -s 124.28.128.0/18 -j ACCEPT
-A PREROUTING -s 124.46.0.0/16 -j ACCEPT
-A PREROUTING -s 124.48.0.0/12 -j ACCEPT
-A PREROUTING -s 124.66.176.0/20 -j ACCEPT
-A PREROUTING -s 124.66.208.0/20 -j ACCEPT
-A PREROUTING -s 124.80.0.0/16 -j ACCEPT
-A PREROUTING -s 124.111.0.0/16 -j ACCEPT
-A PREROUTING -s 124.136.0.0/14 -j ACCEPT
-A PREROUTING -s 124.146.0.0/18 -j ACCEPT
-A PREROUTING -s 124.153.128.0/17 -j ACCEPT
-A PREROUTING -s 124.194.0.0/16 -j ACCEPT
-A PREROUTING -s 124.195.160.0/19 -j ACCEPT
-A PREROUTING -s 124.195.224.0/19 -j ACCEPT
-A PREROUTING -s 124.197.128.0/18 -j ACCEPT
-A PREROUTING -s 124.197.192.0/19 -j ACCEPT
-A PREROUTING -s 124.198.0.0/17 -j ACCEPT
-A PREROUTING -s 124.199.0.0/18 -j ACCEPT
-A PREROUTING -s 124.199.128.0/17 -j ACCEPT
-A PREROUTING -s 124.216.0.0/16 -j ACCEPT
-A PREROUTING -s 124.217.192.0/19 -j ACCEPT
-A PREROUTING -s 124.243.0.0/17 -j ACCEPT
-A PREROUTING -s 124.254.128.0/17 -j ACCEPT
-A PREROUTING -s 125.7.128.0/17 -j ACCEPT
-A PREROUTING -s 125.31.128.0/18 -j ACCEPT
-A PREROUTING -s 125.57.0.0/16 -j ACCEPT
-A PREROUTING -s 125.60.0.0/18 -j ACCEPT
-A PREROUTING -s 125.60.64.0/19 -j ACCEPT
-A PREROUTING -s 125.61.0.0/17 -j ACCEPT
-A PREROUTING -s 125.62.216.0/21 -j ACCEPT
-A PREROUTING -s 125.128.0.0/11 -j ACCEPT
-A PREROUTING -s 125.176.0.0/12 -j ACCEPT
-A PREROUTING -s 125.208.64.0/18 -j ACCEPT
-A PREROUTING -s 125.208.192.0/18 -j ACCEPT
-A PREROUTING -s 125.209.0.0/18 -j ACCEPT
-A PREROUTING -s 125.209.192.0/18 -j ACCEPT
-A PREROUTING -s 125.240.0.0/13 -j ACCEPT
-A PREROUTING -s 125.248.0.0/14 -j ACCEPT
-A PREROUTING -s 125.252.0.0/18 -j ACCEPT
-A PREROUTING -s 125.252.123.21/32 -j ACCEPT
-A PREROUTING -s 125.252.123.22/32 -j ACCEPT
-A PREROUTING -s 125.252.123.29/32 -j ACCEPT
-A PREROUTING -s 125.252.123.33/32 -j ACCEPT
-A PREROUTING -s 125.252.123.34/32 -j ACCEPT
-A PREROUTING -s 125.252.123.57/32 -j ACCEPT
-A PREROUTING -s 125.252.123.61/32 -j ACCEPT
-A PREROUTING -s 125.252.123.73/32 -j ACCEPT
-A PREROUTING -s 125.252.123.74/32 -j ACCEPT
-A PREROUTING -s 125.252.123.93/32 -j ACCEPT
-A PREROUTING -s 128.0.116.0/24 -j ACCEPT
-A PREROUTING -s 128.1.36.0/24 -j ACCEPT
-A PREROUTING -s 128.1.76.0/24 -j ACCEPT
-A PREROUTING -s 128.1.125.0/24 -j ACCEPT
-A PREROUTING -s 128.90.9.0/24 -j ACCEPT
-A PREROUTING -s 128.90.30.0/24 -j ACCEPT
-A PREROUTING -s 128.90.44.0/24 -j ACCEPT
-A PREROUTING -s 128.90.69.0/24 -j ACCEPT
-A PREROUTING -s 128.90.80.0/23 -j ACCEPT
-A PREROUTING -s 128.90.82.0/24 -j ACCEPT
-A PREROUTING -s 128.134.0.0/16 -j ACCEPT
-A PREROUTING -s 129.134.59.112/32 -j ACCEPT
-A PREROUTING -s 129.134.59.126/31 -j ACCEPT
-A PREROUTING -s 129.134.59.128/30 -j ACCEPT
-A PREROUTING -s 129.134.59.140/31 -j ACCEPT
-A PREROUTING -s 129.134.59.147/32 -j ACCEPT
-A PREROUTING -s 129.134.59.173/32 -j ACCEPT
-A PREROUTING -s 129.134.59.174/31 -j ACCEPT
-A PREROUTING -s 129.134.59.176/31 -j ACCEPT
-A PREROUTING -s 129.134.59.178/32 -j ACCEPT
-A PREROUTING -s 129.134.59.180/31 -j ACCEPT
-A PREROUTING -s 129.134.60.179/32 -j ACCEPT
-A PREROUTING -s 129.227.0.0/20 -j ACCEPT
-A PREROUTING -s 129.227.16.0/24 -j ACCEPT
-A PREROUTING -s 129.250.0.52/32 -j ACCEPT
-A PREROUTING -s 129.250.0.74/32 -j ACCEPT
-A PREROUTING -s 129.250.0.91/32 -j ACCEPT
-A PREROUTING -s 129.250.0.103/32 -j ACCEPT
-A PREROUTING -s 129.250.1.67/32 -j ACCEPT
-A PREROUTING -s 129.250.1.68/32 -j ACCEPT
-A PREROUTING -s 129.250.1.74/31 -j ACCEPT
-A PREROUTING -s 129.250.1.135/32 -j ACCEPT
-A PREROUTING -s 129.250.1.136/32 -j ACCEPT
-A PREROUTING -s 129.250.1.188/31 -j ACCEPT
-A PREROUTING -s 129.250.2.30/31 -j ACCEPT
-A PREROUTING -s 129.250.2.124/31 -j ACCEPT
-A PREROUTING -s 129.250.2.144/31 -j ACCEPT
-A PREROUTING -s 129.250.4.5/32 -j ACCEPT
-A PREROUTING -s 129.250.4.93/32 -j ACCEPT
-A PREROUTING -s 129.250.4.94/32 -j ACCEPT
-A PREROUTING -s 129.250.4.192/31 -j ACCEPT
-A PREROUTING -s 129.250.5.74/32 -j ACCEPT
-A PREROUTING -s 129.250.17.45/32 -j ACCEPT
-A PREROUTING -s 129.250.17.46/32 -j ACCEPT
-A PREROUTING -s 129.250.17.49/32 -j ACCEPT
-A PREROUTING -s 129.250.17.50/32 -j ACCEPT
-A PREROUTING -s 129.250.17.120/31 -j ACCEPT
-A PREROUTING -s 129.250.25.105/32 -j ACCEPT
-A PREROUTING -s 129.250.25.106/32 -j ACCEPT
-A PREROUTING -s 129.250.25.129/32 -j ACCEPT
-A PREROUTING -s 129.250.25.130/32 -j ACCEPT
-A PREROUTING -s 129.250.25.133/32 -j ACCEPT
-A PREROUTING -s 129.250.25.134/32 -j ACCEPT
-A PREROUTING -s 129.250.25.225/32 -j ACCEPT
-A PREROUTING -s 129.250.25.226/32 -j ACCEPT
-A PREROUTING -s 129.250.46.121/32 -j ACCEPT
-A PREROUTING -s 129.250.46.122/32 -j ACCEPT
-A PREROUTING -s 129.250.46.125/32 -j ACCEPT
-A PREROUTING -s 129.250.46.126/32 -j ACCEPT
-A PREROUTING -s 129.250.62.36/32 -j ACCEPT
-A PREROUTING -s 129.250.64.105/32 -j ACCEPT
-A PREROUTING -s 129.250.64.106/31 -j ACCEPT
-A PREROUTING -s 129.250.64.113/32 -j ACCEPT
-A PREROUTING -s 129.250.64.114/31 -j ACCEPT
-A PREROUTING -s 129.250.86.65/32 -j ACCEPT
-A PREROUTING -s 129.250.86.66/32 -j ACCEPT
-A PREROUTING -s 129.250.98.38/31 -j ACCEPT
-A PREROUTING -s 129.250.98.40/31 -j ACCEPT
-A PREROUTING -s 129.250.113.81/32 -j ACCEPT
-A PREROUTING -s 129.250.113.82/32 -j ACCEPT
-A PREROUTING -s 129.250.113.89/32 -j ACCEPT
-A PREROUTING -s 129.250.113.90/32 -j ACCEPT
-A PREROUTING -s 129.254.0.0/16 -j ACCEPT
-A PREROUTING -s 130.176.14.0/24 -j ACCEPT
-A PREROUTING -s 130.176.30.0/24 -j ACCEPT
-A PREROUTING -s 130.244.125.97/32 -j ACCEPT
-A PREROUTING -s 130.248.120.0/23 -j ACCEPT
-A PREROUTING -s 131.103.116.37/32 -j ACCEPT
-A PREROUTING -s 131.103.116.38/32 -j ACCEPT
-A PREROUTING -s 131.228.232.0/24 -j ACCEPT
-A PREROUTING -s 132.145.80.0/21 -j ACCEPT
-A PREROUTING -s 132.245.241.224/27 -j ACCEPT
-A PREROUTING -s 132.245.254.160/27 -j ACCEPT
-A PREROUTING -s 134.70.96.0/22 -j ACCEPT
-A PREROUTING -s 134.75.0.0/16 -j ACCEPT
-A PREROUTING -s 134.159.110.0/29 -j ACCEPT
-A PREROUTING -s 134.159.110.56/29 -j ACCEPT
-A PREROUTING -s 134.159.121.0/26 -j ACCEPT
-A PREROUTING -s 134.159.219.0/24 -j ACCEPT
-A PREROUTING -s 134.159.253.0/24 -j ACCEPT
-A PREROUTING -s 134.159.254.0/24 -j ACCEPT
-A PREROUTING -s 137.68.0.0/16 -j ACCEPT
-A PREROUTING -s 137.83.216.0/24 -j ACCEPT
-A PREROUTING -s 139.5.224.0/22 -j ACCEPT
-A PREROUTING -s 139.150.0.0/16 -j ACCEPT
-A PREROUTING -s 140.91.40.0/23 -j ACCEPT
-A PREROUTING -s 140.204.24.128/25 -j ACCEPT
-A PREROUTING -s 140.222.192.100/32 -j ACCEPT
-A PREROUTING -s 140.222.192.102/31 -j ACCEPT
-A PREROUTING -s 140.222.193.204/32 -j ACCEPT
-A PREROUTING -s 140.222.196.100/32 -j ACCEPT
-A PREROUTING -s 141.98.213.0/24 -j ACCEPT
-A PREROUTING -s 141.101.82.0/23 -j ACCEPT
-A PREROUTING -s 141.101.84.0/23 -j ACCEPT
-A PREROUTING -s 141.223.0.0/16 -j ACCEPT
-A PREROUTING -s 143.248.0.0/16 -j ACCEPT
-A PREROUTING -s 144.48.40.0/21 -j ACCEPT
-A PREROUTING -s 144.48.92.0/22 -j ACCEPT
-A PREROUTING -s 144.48.100.0/22 -j ACCEPT
-A PREROUTING -s 144.178.12.128/31 -j ACCEPT
-A PREROUTING -s 144.220.12.0/24 -j ACCEPT
-A PREROUTING -s 146.88.84.0/22 -j ACCEPT
-A PREROUTING -s 147.6.0.0/16 -j ACCEPT
-A PREROUTING -s 147.43.0.0/16 -j ACCEPT
-A PREROUTING -s 147.46.0.0/15 -j ACCEPT
-A PREROUTING -s 147.75.225.0/24 -j ACCEPT
-A PREROUTING -s 147.243.3.192/27 -j ACCEPT
-A PREROUTING -s 147.243.7.64/26 -j ACCEPT
-A PREROUTING -s 147.243.7.128/27 -j ACCEPT
-A PREROUTING -s 147.243.8.32/27 -j ACCEPT
-A PREROUTING -s 147.243.8.64/26 -j ACCEPT
-A PREROUTING -s 147.243.8.128/25 -j ACCEPT
-A PREROUTING -s 147.243.9.96/27 -j ACCEPT
-A PREROUTING -s 147.243.9.128/26 -j ACCEPT
-A PREROUTING -s 147.243.14.0/27 -j ACCEPT
-A PREROUTING -s 149.129.3.0/24 -j ACCEPT
-A PREROUTING -s 149.129.4.0/23 -j ACCEPT
-A PREROUTING -s 149.129.6.0/24 -j ACCEPT
-A PREROUTING -s 149.129.8.0/24 -j ACCEPT
-A PREROUTING -s 149.129.10.0/23 -j ACCEPT
-A PREROUTING -s 149.129.13.0/24 -j ACCEPT
-A PREROUTING -s 150.107.68.0/22 -j ACCEPT
-A PREROUTING -s 150.107.80.0/21 -j ACCEPT
-A PREROUTING -s 150.109.28.0/22 -j ACCEPT
-A PREROUTING -s 150.109.80.0/21 -j ACCEPT
-A PREROUTING -s 150.109.208.0/20 -j ACCEPT
-A PREROUTING -s 150.109.224.0/19 -j ACCEPT
-A PREROUTING -s 150.129.224.0/22 -j ACCEPT
-A PREROUTING -s 150.150.0.0/16 -j ACCEPT
-A PREROUTING -s 150.183.0.0/16 -j ACCEPT
-A PREROUTING -s 150.197.0.0/16 -j ACCEPT
-A PREROUTING -s 150.222.116.0/24 -j ACCEPT
-A PREROUTING -s 150.242.132.0/22 -j ACCEPT
-A PREROUTING -s 150.242.144.0/22 -j ACCEPT
-A PREROUTING -s 151.139.32.0/24 -j ACCEPT
-A PREROUTING -s 151.252.29.240/28 -j ACCEPT
-A PREROUTING -s 152.32.137.0/24 -j ACCEPT
-A PREROUTING -s 152.32.138.0/23 -j ACCEPT
-A PREROUTING -s 152.32.241.0/24 -j ACCEPT
-A PREROUTING -s 152.32.242.0/23 -j ACCEPT
-A PREROUTING -s 152.32.244.0/24 -j ACCEPT
-A PREROUTING -s 152.99.0.0/16 -j ACCEPT
-A PREROUTING -s 152.149.0.0/16 -j ACCEPT
-A PREROUTING -s 153.92.175.0/24 -j ACCEPT
-A PREROUTING -s 154.10.0.0/16 -j ACCEPT
-A PREROUTING -s 154.18.20.0/27 -j ACCEPT
-A PREROUTING -s 154.54.0.186/32 -j ACCEPT
-A PREROUTING -s 154.54.2.109/32 -j ACCEPT
-A PREROUTING -s 154.54.2.110/32 -j ACCEPT
-A PREROUTING -s 154.54.22.58/32 -j ACCEPT
-A PREROUTING -s 154.54.30.205/32 -j ACCEPT
-A PREROUTING -s 154.54.46.41/32 -j ACCEPT
-A PREROUTING -s 154.54.46.42/32 -j ACCEPT
-A PREROUTING -s 154.54.208.12/31 -j ACCEPT
-A PREROUTING -s 154.54.208.17/32 -j ACCEPT
-A PREROUTING -s 154.211.98.0/23 -j ACCEPT
-A PREROUTING -s 154.211.123.0/24 -j ACCEPT
-A PREROUTING -s 154.211.124.0/24 -j ACCEPT
-A PREROUTING -s 154.215.12.0/22 -j ACCEPT
-A PREROUTING -s 154.223.34.0/23 -j ACCEPT
-A PREROUTING -s 155.230.0.0/16 -j ACCEPT
-A PREROUTING -s 156.107.107.184/29 -j ACCEPT
-A PREROUTING -s 156.107.136.32/30 -j ACCEPT
-A PREROUTING -s 156.107.136.152/30 -j ACCEPT
-A PREROUTING -s 156.107.137.32/30 -j ACCEPT
-A PREROUTING -s 156.107.156.32/30 -j ACCEPT
-A PREROUTING -s 156.107.156.152/30 -j ACCEPT
-A PREROUTING -s 156.107.157.32/30 -j ACCEPT
-A PREROUTING -s 156.147.0.0/16 -j ACCEPT
-A PREROUTING -s 157.56.210.0/28 -j ACCEPT
-A PREROUTING -s 157.56.210.16/29 -j ACCEPT
-A PREROUTING -s 157.56.210.48/29 -j ACCEPT
-A PREROUTING -s 157.56.210.72/29 -j ACCEPT
-A PREROUTING -s 157.56.210.136/29 -j ACCEPT
-A PREROUTING -s 157.56.210.152/29 -j ACCEPT
-A PREROUTING -s 157.56.211.16/29 -j ACCEPT
-A PREROUTING -s 157.56.233.160/29 -j ACCEPT
-A PREROUTING -s 157.56.235.144/28 -j ACCEPT
-A PREROUTING -s 157.119.32.0/21 -j ACCEPT
-A PREROUTING -s 157.167.26.0/24 -j ACCEPT
-A PREROUTING -s 157.197.0.0/16 -j ACCEPT
-A PREROUTING -s 157.240.41.170/31 -j ACCEPT
-A PREROUTING -s 157.240.42.180/31 -j ACCEPT
-A PREROUTING -s 157.240.42.188/31 -j ACCEPT
-A PREROUTING -s 157.240.42.194/31 -j ACCEPT
-A PREROUTING -s 157.240.42.198/31 -j ACCEPT
-A PREROUTING -s 157.240.44.20/31 -j ACCEPT
-A PREROUTING -s 157.240.44.100/31 -j ACCEPT
-A PREROUTING -s 157.240.44.106/31 -j ACCEPT
-A PREROUTING -s 157.240.44.108/31 -j ACCEPT
-A PREROUTING -s 157.240.45.250/31 -j ACCEPT
-A PREROUTING -s 157.240.45.254/31 -j ACCEPT
-A PREROUTING -s 157.240.46.66/31 -j ACCEPT
-A PREROUTING -s 157.240.46.108/31 -j ACCEPT
-A PREROUTING -s 157.240.46.161/32 -j ACCEPT
-A PREROUTING -s 157.240.46.203/32 -j ACCEPT
-A PREROUTING -s 157.240.63.116/30 -j ACCEPT
-A PREROUTING -s 157.240.63.120/29 -j ACCEPT
-A PREROUTING -s 158.44.0.0/16 -j ACCEPT
-A PREROUTING -s 158.46.160.0/22 -j ACCEPT
-A PREROUTING -s 158.116.222.53/32 -j ACCEPT
-A PREROUTING -s 158.116.222.54/32 -j ACCEPT
-A PREROUTING -s 158.116.222.188/31 -j ACCEPT
-A PREROUTING -s 159.100.201.0/24 -j ACCEPT
-A PREROUTING -s 159.153.218.0/24 -j ACCEPT
-A PREROUTING -s 160.202.160.0/22 -j ACCEPT
-A PREROUTING -s 160.202.172.0/22 -j ACCEPT
-A PREROUTING -s 160.202.176.0/22 -j ACCEPT
-A PREROUTING -s 161.122.0.0/16 -j ACCEPT
-A PREROUTING -s 162.158.188.0/23 -j ACCEPT
-A PREROUTING -s 162.158.190.0/24 -j ACCEPT
-A PREROUTING -s 163.53.156.0/22 -j ACCEPT
-A PREROUTING -s 163.116.201.0/24 -j ACCEPT
-A PREROUTING -s 163.152.0.0/16 -j ACCEPT
-A PREROUTING -s 163.180.0.0/16 -j ACCEPT
-A PREROUTING -s 163.213.0.0/16 -j ACCEPT
-A PREROUTING -s 163.222.0.0/16 -j ACCEPT
-A PREROUTING -s 163.229.0.0/16 -j ACCEPT
-A PREROUTING -s 163.239.0.0/16 -j ACCEPT
-A PREROUTING -s 163.255.0.0/16 -j ACCEPT
-A PREROUTING -s 164.40.160.0/29 -j ACCEPT
-A PREROUTING -s 164.124.0.0/15 -j ACCEPT
-A PREROUTING -s 165.132.0.0/15 -j ACCEPT
-A PREROUTING -s 165.141.0.0/16 -j ACCEPT
-A PREROUTING -s 165.186.0.0/16 -j ACCEPT
-A PREROUTING -s 165.194.0.0/16 -j ACCEPT
-A PREROUTING -s 165.204.132.0/23 -j ACCEPT
-A PREROUTING -s 165.213.0.0/16 -j ACCEPT
-A PREROUTING -s 165.229.0.0/16 -j ACCEPT
-A PREROUTING -s 165.243.0.0/16 -j ACCEPT
-A PREROUTING -s 165.244.0.0/16 -j ACCEPT
-A PREROUTING -s 165.246.0.0/16 -j ACCEPT
-A PREROUTING -s 165.254.163.57/32 -j ACCEPT
-A PREROUTING -s 166.79.0.0/16 -j ACCEPT
-A PREROUTING -s 166.103.0.0/16 -j ACCEPT
-A PREROUTING -s 166.104.0.0/16 -j ACCEPT
-A PREROUTING -s 166.125.0.0/16 -j ACCEPT
-A PREROUTING -s 167.179.212.0/22 -j ACCEPT
-A PREROUTING -s 168.78.0.0/16 -j ACCEPT
-A PREROUTING -s 168.115.0.0/16 -j ACCEPT
-A PREROUTING -s 168.126.0.0/16 -j ACCEPT
-A PREROUTING -s 168.131.0.0/16 -j ACCEPT
-A PREROUTING -s 168.149.154.0/24 -j ACCEPT
-A PREROUTING -s 168.154.0.0/16 -j ACCEPT
-A PREROUTING -s 168.188.0.0/16 -j ACCEPT
-A PREROUTING -s 168.219.0.0/16 -j ACCEPT
-A PREROUTING -s 168.248.0.0/15 -j ACCEPT
-A PREROUTING -s 169.45.16.23/32 -j ACCEPT
-A PREROUTING -s 169.45.16.24/32 -j ACCEPT
-A PREROUTING -s 169.45.17.3/32 -j ACCEPT
-A PREROUTING -s 169.45.17.4/32 -j ACCEPT
-A PREROUTING -s 169.56.64.0/29 -j ACCEPT
-A PREROUTING -s 169.56.64.16/28 -j ACCEPT
-A PREROUTING -s 169.56.64.216/29 -j ACCEPT
-A PREROUTING -s 169.56.64.224/27 -j ACCEPT
-A PREROUTING -s 169.56.65.20/32 -j ACCEPT
-A PREROUTING -s 169.56.67.0/28 -j ACCEPT
-A PREROUTING -s 169.56.71.96/27 -j ACCEPT
-A PREROUTING -s 169.56.71.200/29 -j ACCEPT
-A PREROUTING -s 169.56.71.209/32 -j ACCEPT
-A PREROUTING -s 169.56.71.210/31 -j ACCEPT
-A PREROUTING -s 169.56.71.226/31 -j ACCEPT
-A PREROUTING -s 169.56.72.118/31 -j ACCEPT
-A PREROUTING -s 169.56.73.64/27 -j ACCEPT
-A PREROUTING -s 169.56.73.96/28 -j ACCEPT
-A PREROUTING -s 169.56.76.128/26 -j ACCEPT
-A PREROUTING -s 169.56.77.182/32 -j ACCEPT
-A PREROUTING -s 169.56.77.204/30 -j ACCEPT
-A PREROUTING -s 169.56.83.188/30 -j ACCEPT
-A PREROUTING -s 169.56.87.144/28 -j ACCEPT
-A PREROUTING -s 169.56.90.0/25 -j ACCEPT
-A PREROUTING -s 169.56.90.128/27 -j ACCEPT
-A PREROUTING -s 169.56.92.128/27 -j ACCEPT
-A PREROUTING -s 169.56.92.176/28 -j ACCEPT
-A PREROUTING -s 169.56.93.128/27 -j ACCEPT
-A PREROUTING -s 169.56.97.73/32 -j ACCEPT
-A PREROUTING -s 169.56.98.0/27 -j ACCEPT
-A PREROUTING -s 169.56.103.0/28 -j ACCEPT
-A PREROUTING -s 169.56.107.160/27 -j ACCEPT
-A PREROUTING -s 169.56.107.192/26 -j ACCEPT
-A PREROUTING -s 169.56.108.202/31 -j ACCEPT
-A PREROUTING -s 169.56.109.18/32 -j ACCEPT
-A PREROUTING -s 169.56.116.16/32 -j ACCEPT
-A PREROUTING -s 169.56.116.20/32 -j ACCEPT
-A PREROUTING -s 169.56.117.0/24 -j ACCEPT
-A PREROUTING -s 169.56.118.0/24 -j ACCEPT
-A PREROUTING -s 169.56.120.8/29 -j ACCEPT
-A PREROUTING -s 169.56.123.0/24 -j ACCEPT
-A PREROUTING -s 169.56.124.0/29 -j ACCEPT
-A PREROUTING -s 169.56.124.8/30 -j ACCEPT
-A PREROUTING -s 169.56.124.64/27 -j ACCEPT
-A PREROUTING -s 169.56.126.0/27 -j ACCEPT
-A PREROUTING -s 169.56.126.160/27 -j ACCEPT
-A PREROUTING -s 169.56.126.192/28 -j ACCEPT
-A PREROUTING -s 169.56.127.225/32 -j ACCEPT
-A PREROUTING -s 169.56.127.226/31 -j ACCEPT
-A PREROUTING -s 169.56.127.228/31 -j ACCEPT
-A PREROUTING -s 169.56.164.0/24 -j ACCEPT
-A PREROUTING -s 169.56.166.0/24 -j ACCEPT
-A PREROUTING -s 169.56.176.0/24 -j ACCEPT
-A PREROUTING -s 169.56.180.0/24 -j ACCEPT
-A PREROUTING -s 169.56.183.0/24 -j ACCEPT
-A PREROUTING -s 169.140.0.0/16 -j ACCEPT
-A PREROUTING -s 169.208.0.0/12 -j ACCEPT
-A PREROUTING -s 172.94.82.0/24 -j ACCEPT
-A PREROUTING -s 172.111.185.0/24 -j ACCEPT
-A PREROUTING -s 173.192.18.64/31 -j ACCEPT
-A PREROUTING -s 173.223.140.0/22 -j ACCEPT
-A PREROUTING -s 173.223.227.0/24 -j ACCEPT
-A PREROUTING -s 173.245.218.224/28 -j ACCEPT
-A PREROUTING -s 173.245.219.0/24 -j ACCEPT
-A PREROUTING -s 173.252.64.64/31 -j ACCEPT
-A PREROUTING -s 173.252.64.116/31 -j ACCEPT
-A PREROUTING -s 173.252.65.30/32 -j ACCEPT
-A PREROUTING -s 173.252.65.90/32 -j ACCEPT
-A PREROUTING -s 175.28.32.0/20 -j ACCEPT
-A PREROUTING -s 175.41.0.0/20 -j ACCEPT
-A PREROUTING -s 175.45.160.0/21 -j ACCEPT
-A PREROUTING -s 175.45.192.0/18 -j ACCEPT
-A PREROUTING -s 175.106.64.0/18 -j ACCEPT
-A PREROUTING -s 175.107.64.0/18 -j ACCEPT
-A PREROUTING -s 175.111.16.0/20 -j ACCEPT
-A PREROUTING -s 175.112.0.0/12 -j ACCEPT
-A PREROUTING -s 175.158.0.0/19 -j ACCEPT
-A PREROUTING -s 175.176.128.0/20 -j ACCEPT
-A PREROUTING -s 175.192.0.0/10 -j ACCEPT
-A PREROUTING -s 176.67.86.133/32 -j ACCEPT
-A PREROUTING -s 176.67.86.134/31 -j ACCEPT
-A PREROUTING -s 178.171.92.0/22 -j ACCEPT
-A PREROUTING -s 178.171.96.0/22 -j ACCEPT
-A PREROUTING -s 180.64.0.0/13 -j ACCEPT
-A PREROUTING -s 180.80.0.0/14 -j ACCEPT
-A PREROUTING -s 180.87.99.64/29 -j ACCEPT
-A PREROUTING -s 180.92.64.0/18 -j ACCEPT
-A PREROUTING -s 180.92.240.0/20 -j ACCEPT
-A PREROUTING -s 180.131.0.0/18 -j ACCEPT
-A PREROUTING -s 180.132.0.0/14 -j ACCEPT
-A PREROUTING -s 180.148.180.0/22 -j ACCEPT
-A PREROUTING -s 180.150.192.0/19 -j ACCEPT
-A PREROUTING -s 180.150.224.0/21 -j ACCEPT
-A PREROUTING -s 180.182.0.0/16 -j ACCEPT
-A PREROUTING -s 180.189.64.0/18 -j ACCEPT
-A PREROUTING -s 180.189.176.0/20 -j ACCEPT
-A PREROUTING -s 180.210.0.0/17 -j ACCEPT
-A PREROUTING -s 180.210.192.0/21 -j ACCEPT
-A PREROUTING -s 180.211.0.0/18 -j ACCEPT
-A PREROUTING -s 180.222.220.0/24 -j ACCEPT
-A PREROUTING -s 180.224.0.0/13 -j ACCEPT
-A PREROUTING -s 180.233.116.0/24 -j ACCEPT
-A PREROUTING -s 180.233.192.0/18 -j ACCEPT
-A PREROUTING -s 180.236.0.0/14 -j ACCEPT
-A PREROUTING -s 182.31.0.0/16 -j ACCEPT
-A PREROUTING -s 182.50.16.0/20 -j ACCEPT
-A PREROUTING -s 182.50.32.0/19 -j ACCEPT
-A PREROUTING -s 182.161.66.0/24 -j ACCEPT
-A PREROUTING -s 182.161.96.0/19 -j ACCEPT
-A PREROUTING -s 182.161.128.0/17 -j ACCEPT
-A PREROUTING -s 182.162.0.0/16 -j ACCEPT
-A PREROUTING -s 182.163.128.0/17 -j ACCEPT
-A PREROUTING -s 182.172.0.0/16 -j ACCEPT
-A PREROUTING -s 182.173.80.0/20 -j ACCEPT
-A PREROUTING -s 182.173.96.0/19 -j ACCEPT
-A PREROUTING -s 182.173.160.0/19 -j ACCEPT
-A PREROUTING -s 182.192.0.0/13 -j ACCEPT
-A PREROUTING -s 182.208.0.0/12 -j ACCEPT
-A PREROUTING -s 182.224.0.0/13 -j ACCEPT
-A PREROUTING -s 182.237.32.0/19 -j ACCEPT
-A PREROUTING -s 182.237.64.0/18 -j ACCEPT
-A PREROUTING -s 182.237.192.0/18 -j ACCEPT
-A PREROUTING -s 182.252.0.0/18 -j ACCEPT
-A PREROUTING -s 182.252.128.0/17 -j ACCEPT
-A PREROUTING -s 182.255.128.0/17 -j ACCEPT
-A PREROUTING -s 183.78.128.0/19 -j ACCEPT
-A PREROUTING -s 183.78.192.0/18 -j ACCEPT
-A PREROUTING -s 183.86.192.0/18 -j ACCEPT
-A PREROUTING -s 183.90.128.0/19 -j ACCEPT
-A PREROUTING -s 183.91.192.0/18 -j ACCEPT
-A PREROUTING -s 183.96.0.0/11 -j ACCEPT
-A PREROUTING -s 183.177.68.0/22 -j ACCEPT
-A PREROUTING -s 184.25.16.0/20 -j ACCEPT
-A PREROUTING -s 184.25.80.0/20 -j ACCEPT
-A PREROUTING -s 184.25.184.0/22 -j ACCEPT
-A PREROUTING -s 184.27.200.0/24 -j ACCEPT
-A PREROUTING -s 184.28.152.0/23 -j ACCEPT
-A PREROUTING -s 184.29.78.0/23 -j ACCEPT
-A PREROUTING -s 184.85.234.0/23 -j ACCEPT
-A PREROUTING -s 184.105.64.66/32 -j ACCEPT
-A PREROUTING -s 184.105.65.61/32 -j ACCEPT
-A PREROUTING -s 184.105.65.62/32 -j ACCEPT
-A PREROUTING -s 184.105.81.70/32 -j ACCEPT
-A PREROUTING -s 185.92.24.0/24 -j ACCEPT
-A PREROUTING -s 185.170.162.0/24 -j ACCEPT
-A PREROUTING -s 185.202.101.0/24 -j ACCEPT
-A PREROUTING -s 185.221.68.42/31 -j ACCEPT
-A PREROUTING -s 185.221.69.42/31 -j ACCEPT
-A PREROUTING -s 185.221.70.42/31 -j ACCEPT
-A PREROUTING -s 188.116.48.0/23 -j ACCEPT
-A PREROUTING -s 188.125.71.219/32 -j ACCEPT
-A PREROUTING -s 188.172.210.0/24 -j ACCEPT
-A PREROUTING -s 191.101.171.0/24 -j ACCEPT
-A PREROUTING -s 192.5.90.0/24 -j ACCEPT
-A PREROUTING -s 192.19.208.0/24 -j ACCEPT
-A PREROUTING -s 192.29.16.0/21 -j ACCEPT
-A PREROUTING -s 192.80.17.81/32 -j ACCEPT
-A PREROUTING -s 192.100.2.0/24 -j ACCEPT
-A PREROUTING -s 192.104.15.0/24 -j ACCEPT
-A PREROUTING -s 192.132.15.0/24 -j ACCEPT
-A PREROUTING -s 192.132.247.0/24 -j ACCEPT
-A PREROUTING -s 192.132.248.0/22 -j ACCEPT
-A PREROUTING -s 192.145.251.2/32 -j ACCEPT
-A PREROUTING -s 192.145.251.28/31 -j ACCEPT
-A PREROUTING -s 192.145.251.32/32 -j ACCEPT
-A PREROUTING -s 192.145.251.39/32 -j ACCEPT
-A PREROUTING -s 192.145.251.40/32 -j ACCEPT
-A PREROUTING -s 192.145.251.44/31 -j ACCEPT
-A PREROUTING -s 192.145.251.47/32 -j ACCEPT
-A PREROUTING -s 192.145.251.54/31 -j ACCEPT
-A PREROUTING -s 192.145.251.59/32 -j ACCEPT
-A PREROUTING -s 192.145.251.61/32 -j ACCEPT
-A PREROUTING -s 192.145.251.62/32 -j ACCEPT
-A PREROUTING -s 192.145.251.65/32 -j ACCEPT
-A PREROUTING -s 192.145.251.68/32 -j ACCEPT
-A PREROUTING -s 192.145.251.92/32 -j ACCEPT
-A PREROUTING -s 192.145.251.98/32 -j ACCEPT
-A PREROUTING -s 192.145.251.101/32 -j ACCEPT
-A PREROUTING -s 192.145.251.105/32 -j ACCEPT
-A PREROUTING -s 192.145.251.106/32 -j ACCEPT
-A PREROUTING -s 192.145.251.110/31 -j ACCEPT
-A PREROUTING -s 192.145.251.112/31 -j ACCEPT
-A PREROUTING -s 192.145.251.114/32 -j ACCEPT
-A PREROUTING -s 192.145.251.117/32 -j ACCEPT
-A PREROUTING -s 192.145.251.134/32 -j ACCEPT
-A PREROUTING -s 192.145.251.151/32 -j ACCEPT
-A PREROUTING -s 192.145.251.152/32 -j ACCEPT
-A PREROUTING -s 192.145.251.159/32 -j ACCEPT
-A PREROUTING -s 192.145.251.160/32 -j ACCEPT
-A PREROUTING -s 192.145.251.171/32 -j ACCEPT
-A PREROUTING -s 192.145.251.176/32 -j ACCEPT
-A PREROUTING -s 192.145.251.178/32 -j ACCEPT
-A PREROUTING -s 192.145.251.181/32 -j ACCEPT
-A PREROUTING -s 192.145.251.187/32 -j ACCEPT
-A PREROUTING -s 192.145.251.188/32 -j ACCEPT
-A PREROUTING -s 192.158.245.0/24 -j ACCEPT
-A PREROUTING -s 192.195.39.0/24 -j ACCEPT
-A PREROUTING -s 192.195.40.0/24 -j ACCEPT
-A PREROUTING -s 192.203.138.0/23 -j ACCEPT
-A PREROUTING -s 192.203.140.0/22 -j ACCEPT
-A PREROUTING -s 192.203.144.0/23 -j ACCEPT
-A PREROUTING -s 192.203.146.0/24 -j ACCEPT
-A PREROUTING -s 192.230.88.0/24 -j ACCEPT
-A PREROUTING -s 192.245.249.0/24 -j ACCEPT
-A PREROUTING -s 192.245.250.0/23 -j ACCEPT
-A PREROUTING -s 192.249.16.0/20 -j ACCEPT
-A PREROUTING -s 193.109.117.0/24 -j ACCEPT
-A PREROUTING -s 193.118.158.0/24 -j ACCEPT
-A PREROUTING -s 193.129.98.220/30 -j ACCEPT
-A PREROUTING -s 194.107.19.0/24 -j ACCEPT
-A PREROUTING -s 194.113.172.0/24 -j ACCEPT
-A PREROUTING -s 194.127.98.0/23 -j ACCEPT
-A PREROUTING -s 194.127.104.0/23 -j ACCEPT
-A PREROUTING -s 194.199.83.250/31 -j ACCEPT
-A PREROUTING -s 196.17.226.0/24 -j ACCEPT
-A PREROUTING -s 196.17.229.0/24 -j ACCEPT
-A PREROUTING -s 196.53.89.0/24 -j ACCEPT
-A PREROUTING -s 198.24.63.96/28 -j ACCEPT
-A PREROUTING -s 198.64.0.29/32 -j ACCEPT
-A PREROUTING -s 198.64.1.48/31 -j ACCEPT
-A PREROUTING -s 198.64.2.48/31 -j ACCEPT
-A PREROUTING -s 198.64.3.48/31 -j ACCEPT
-A PREROUTING -s 198.148.192.0/22 -j ACCEPT
-A PREROUTING -s 198.206.164.240/31 -j ACCEPT
-A PREROUTING -s 198.206.164.242/32 -j ACCEPT
-A PREROUTING -s 198.206.164.244/32 -j ACCEPT
-A PREROUTING -s 202.3.16.0/20 -j ACCEPT
-A PREROUTING -s 202.6.95.0/24 -j ACCEPT
-A PREROUTING -s 202.8.160.0/19 -j ACCEPT
-A PREROUTING -s 202.14.90.0/23 -j ACCEPT
-A PREROUTING -s 202.14.103.0/24 -j ACCEPT
-A PREROUTING -s 202.14.165.0/24 -j ACCEPT
-A PREROUTING -s 202.20.82.0/23 -j ACCEPT
-A PREROUTING -s 202.20.84.0/23 -j ACCEPT
-A PREROUTING -s 202.20.99.0/24 -j ACCEPT
-A PREROUTING -s 202.20.119.0/24 -j ACCEPT
-A PREROUTING -s 202.20.128.0/17 -j ACCEPT
-A PREROUTING -s 202.21.0.0/21 -j ACCEPT
-A PREROUTING -s 202.22.43.0/24 -j ACCEPT
-A PREROUTING -s 202.30.0.0/19 -j ACCEPT
-A PREROUTING -s 202.30.32.0/23 -j ACCEPT
-A PREROUTING -s 202.30.34.0/24 -j ACCEPT
-A PREROUTING -s 202.30.36.0/23 -j ACCEPT
-A PREROUTING -s 202.30.38.0/24 -j ACCEPT
-A PREROUTING -s 202.30.40.0/21 -j ACCEPT
-A PREROUTING -s 202.30.48.0/22 -j ACCEPT
-A PREROUTING -s 202.30.54.0/23 -j ACCEPT
-A PREROUTING -s 202.30.58.0/23 -j ACCEPT
-A PREROUTING -s 202.30.60.0/22 -j ACCEPT
-A PREROUTING -s 202.30.64.0/19 -j ACCEPT
-A PREROUTING -s 202.30.96.0/20 -j ACCEPT
-A PREROUTING -s 202.30.112.0/21 -j ACCEPT
-A PREROUTING -s 202.30.120.0/22 -j ACCEPT
-A PREROUTING -s 202.30.124.0/24 -j ACCEPT
-A PREROUTING -s 202.30.128.0/17 -j ACCEPT
-A PREROUTING -s 202.31.0.0/17 -j ACCEPT
-A PREROUTING -s 202.31.128.0/20 -j ACCEPT
-A PREROUTING -s 202.31.144.0/21 -j ACCEPT
-A PREROUTING -s 202.31.152.0/23 -j ACCEPT
-A PREROUTING -s 202.31.155.0/24 -j ACCEPT
-A PREROUTING -s 202.31.176.0/22 -j ACCEPT
-A PREROUTING -s 202.31.180.0/24 -j ACCEPT
-A PREROUTING -s 202.31.182.0/23 -j ACCEPT
-A PREROUTING -s 202.31.184.0/21 -j ACCEPT
-A PREROUTING -s 202.31.192.0/20 -j ACCEPT
-A PREROUTING -s 202.31.212.0/22 -j ACCEPT
-A PREROUTING -s 202.31.216.0/22 -j ACCEPT
-A PREROUTING -s 202.31.224.0/19 -j ACCEPT
-A PREROUTING -s 202.41.145.0/24 -j ACCEPT
-A PREROUTING -s 202.43.48.0/20 -j ACCEPT
-A PREROUTING -s 202.47.143.0/24 -j ACCEPT
-A PREROUTING -s 202.59.216.0/21 -j ACCEPT
-A PREROUTING -s 202.68.224.0/19 -j ACCEPT
-A PREROUTING -s 202.72.102.0/24 -j ACCEPT
-A PREROUTING -s 202.73.132.0/22 -j ACCEPT
-A PREROUTING -s 202.76.244.0/24 -j ACCEPT
-A PREROUTING -s 202.79.196.0/26 -j ACCEPT
-A PREROUTING -s 202.79.220.84/30 -j ACCEPT
-A PREROUTING -s 202.79.220.144/28 -j ACCEPT
-A PREROUTING -s 202.86.8.0/21 -j ACCEPT
-A PREROUTING -s 202.89.124.0/22 -j ACCEPT
-A PREROUTING -s 202.89.248.0/22 -j ACCEPT
-A PREROUTING -s 202.90.252.0/22 -j ACCEPT
-A PREROUTING -s 202.93.6.0/23 -j ACCEPT
-A PREROUTING -s 202.124.249.0/24 -j ACCEPT
-A PREROUTING -s 202.124.250.0/23 -j ACCEPT
-A PREROUTING -s 202.126.112.0/21 -j ACCEPT
-A PREROUTING -s 202.128.100.0/23 -j ACCEPT
-A PREROUTING -s 202.128.130.64/28 -j ACCEPT
-A PREROUTING -s 202.128.130.88/29 -j ACCEPT
-A PREROUTING -s 202.128.130.128/28 -j ACCEPT
-A PREROUTING -s 202.128.130.144/29 -j ACCEPT
-A PREROUTING -s 202.128.130.192/29 -j ACCEPT
-A PREROUTING -s 202.128.131.0/24 -j ACCEPT
-A PREROUTING -s 202.128.132.0/22 -j ACCEPT
-A PREROUTING -s 202.131.24.0/21 -j ACCEPT
-A PREROUTING -s 202.133.16.0/20 -j ACCEPT
-A PREROUTING -s 202.135.218.0/26 -j ACCEPT
-A PREROUTING -s 202.136.112.0/20 -j ACCEPT
-A PREROUTING -s 202.136.128.0/19 -j ACCEPT
-A PREROUTING -s 202.147.8.1/32 -j ACCEPT
-A PREROUTING -s 202.147.8.2/32 -j ACCEPT
-A PREROUTING -s 202.147.8.5/32 -j ACCEPT
-A PREROUTING -s 202.147.8.6/31 -j ACCEPT
-A PREROUTING -s 202.147.8.33/32 -j ACCEPT
-A PREROUTING -s 202.147.8.37/32 -j ACCEPT
-A PREROUTING -s 202.147.8.41/32 -j ACCEPT
-A PREROUTING -s 202.147.8.50/32 -j ACCEPT
-A PREROUTING -s 202.147.8.69/32 -j ACCEPT
-A PREROUTING -s 202.147.8.77/32 -j ACCEPT
-A PREROUTING -s 202.147.8.106/32 -j ACCEPT
-A PREROUTING -s 202.147.8.109/32 -j ACCEPT
-A PREROUTING -s 202.147.8.119/32 -j ACCEPT
-A PREROUTING -s 202.147.8.125/32 -j ACCEPT
-A PREROUTING -s 202.147.8.126/32 -j ACCEPT
-A PREROUTING -s 202.147.8.130/32 -j ACCEPT
-A PREROUTING -s 202.147.8.138/32 -j ACCEPT
-A PREROUTING -s 202.147.8.161/32 -j ACCEPT
-A PREROUTING -s 202.147.8.178/32 -j ACCEPT
-A PREROUTING -s 202.147.8.186/32 -j ACCEPT
-A PREROUTING -s 202.147.9.11/32 -j ACCEPT
-A PREROUTING -s 202.147.9.12/32 -j ACCEPT
-A PREROUTING -s 202.147.9.145/32 -j ACCEPT
-A PREROUTING -s 202.147.9.146/32 -j ACCEPT
-A PREROUTING -s 202.147.9.165/32 -j ACCEPT
-A PREROUTING -s 202.147.9.166/32 -j ACCEPT
-A PREROUTING -s 202.147.9.241/32 -j ACCEPT
-A PREROUTING -s 202.147.9.242/32 -j ACCEPT
-A PREROUTING -s 202.147.9.245/32 -j ACCEPT
-A PREROUTING -s 202.147.9.246/32 -j ACCEPT
-A PREROUTING -s 202.147.9.253/32 -j ACCEPT
-A PREROUTING -s 202.147.9.254/32 -j ACCEPT
-A PREROUTING -s 202.147.11.64/27 -j ACCEPT
-A PREROUTING -s 202.147.11.120/29 -j ACCEPT
-A PREROUTING -s 202.147.11.176/28 -j ACCEPT
-A PREROUTING -s 202.147.11.200/29 -j ACCEPT
-A PREROUTING -s 202.147.11.224/28 -j ACCEPT
-A PREROUTING -s 202.147.12.64/27 -j ACCEPT
-A PREROUTING -s 202.147.12.96/28 -j ACCEPT
-A PREROUTING -s 202.147.12.112/29 -j ACCEPT
-A PREROUTING -s 202.147.12.128/27 -j ACCEPT
-A PREROUTING -s 202.147.12.160/28 -j ACCEPT
-A PREROUTING -s 202.147.13.64/26 -j ACCEPT
-A PREROUTING -s 202.148.48.0/22 -j ACCEPT
-A PREROUTING -s 202.150.176.0/20 -j ACCEPT
-A PREROUTING -s 202.158.144.0/20 -j ACCEPT
-A PREROUTING -s 202.162.102.0/24 -j ACCEPT
-A PREROUTING -s 202.163.128.0/19 -j ACCEPT
-A PREROUTING -s 202.165.56.0/22 -j ACCEPT
-A PREROUTING -s 202.167.31.0/24 -j ACCEPT
-A PREROUTING -s 202.167.208.0/20 -j ACCEPT
-A PREROUTING -s 202.168.152.0/22 -j ACCEPT
-A PREROUTING -s 202.171.248.0/22 -j ACCEPT
-A PREROUTING -s 202.174.88.0/22 -j ACCEPT
-A PREROUTING -s 202.179.148.0/22 -j ACCEPT
-A PREROUTING -s 202.179.176.0/21 -j ACCEPT
-A PREROUTING -s 202.189.128.0/24 -j ACCEPT
-A PREROUTING -s 203.17.226.0/24 -j ACCEPT
-A PREROUTING -s 203.77.176.0/24 -j ACCEPT
-A PREROUTING -s 203.77.184.202/32 -j ACCEPT
-A PREROUTING -s 203.77.185.9/32 -j ACCEPT
-A PREROUTING -s 203.81.8.0/22 -j ACCEPT
-A PREROUTING -s 203.81.128.0/19 -j ACCEPT
-A PREROUTING -s 203.82.219.0/24 -j ACCEPT
-A PREROUTING -s 203.82.220.0/23 -j ACCEPT
-A PREROUTING -s 203.82.240.0/21 -j ACCEPT
-A PREROUTING -s 203.83.158.0/23 -j ACCEPT
-A PREROUTING -s 203.84.212.1/32 -j ACCEPT
-A PREROUTING -s 203.84.212.8/32 -j ACCEPT
-A PREROUTING -s 203.84.240.0/20 -j ACCEPT
-A PREROUTING -s 203.89.8.0/23 -j ACCEPT
-A PREROUTING -s 203.90.32.0/19 -j ACCEPT
-A PREROUTING -s 203.92.219.200/32 -j ACCEPT
-A PREROUTING -s 203.100.130.177/32 -j ACCEPT
-A PREROUTING -s 203.100.130.178/32 -j ACCEPT
-A PREROUTING -s 203.100.144.38/32 -j ACCEPT
-A PREROUTING -s 203.100.152.46/32 -j ACCEPT
-A PREROUTING -s 203.100.156.1/32 -j ACCEPT
-A PREROUTING -s 203.100.156.2/31 -j ACCEPT
-A PREROUTING -s 203.100.156.4/32 -j ACCEPT
-A PREROUTING -s 203.100.156.7/32 -j ACCEPT
-A PREROUTING -s 203.100.156.8/32 -j ACCEPT
-A PREROUTING -s 203.100.156.18/31 -j ACCEPT
-A PREROUTING -s 203.100.156.33/32 -j ACCEPT
-A PREROUTING -s 203.100.156.37/32 -j ACCEPT
-A PREROUTING -s 203.100.156.38/32 -j ACCEPT
-A PREROUTING -s 203.100.156.40/30 -j ACCEPT
-A PREROUTING -s 203.100.156.45/32 -j ACCEPT
-A PREROUTING -s 203.100.156.46/32 -j ACCEPT
-A PREROUTING -s 203.100.156.49/32 -j ACCEPT
-A PREROUTING -s 203.100.156.50/31 -j ACCEPT
-A PREROUTING -s 203.100.156.52/31 -j ACCEPT
-A PREROUTING -s 203.100.156.61/32 -j ACCEPT
-A PREROUTING -s 203.100.156.65/32 -j ACCEPT
-A PREROUTING -s 203.100.156.66/32 -j ACCEPT
-A PREROUTING -s 203.100.156.72/32 -j ACCEPT
-A PREROUTING -s 203.100.156.133/32 -j ACCEPT
-A PREROUTING -s 203.100.156.134/32 -j ACCEPT
-A PREROUTING -s 203.100.156.137/32 -j ACCEPT
-A PREROUTING -s 203.100.156.138/32 -j ACCEPT
-A PREROUTING -s 203.100.156.145/32 -j ACCEPT
-A PREROUTING -s 203.100.156.146/32 -j ACCEPT
-A PREROUTING -s 203.100.156.157/32 -j ACCEPT
-A PREROUTING -s 203.100.156.173/32 -j ACCEPT
-A PREROUTING -s 203.100.156.174/32 -j ACCEPT
-A PREROUTING -s 203.100.156.193/32 -j ACCEPT
-A PREROUTING -s 203.100.156.197/32 -j ACCEPT
-A PREROUTING -s 203.100.156.198/32 -j ACCEPT
-A PREROUTING -s 203.100.156.201/32 -j ACCEPT
-A PREROUTING -s 203.100.156.225/32 -j ACCEPT
-A PREROUTING -s 203.100.156.226/32 -j ACCEPT
-A PREROUTING -s 203.100.156.230/32 -j ACCEPT
-A PREROUTING -s 203.100.156.241/32 -j ACCEPT
-A PREROUTING -s 203.100.160.0/19 -j ACCEPT
-A PREROUTING -s 203.102.28.4/32 -j ACCEPT
-A PREROUTING -s 203.102.28.64/32 -j ACCEPT
-A PREROUTING -s 203.102.29.0/24 -j ACCEPT
-A PREROUTING -s 203.109.0.0/19 -j ACCEPT
-A PREROUTING -s 203.123.192.0/19 -j ACCEPT
-A PREROUTING -s 203.128.160.0/19 -j ACCEPT
-A PREROUTING -s 203.128.192.0/19 -j ACCEPT
-A PREROUTING -s 203.128.236.0/22 -j ACCEPT
-A PREROUTING -s 203.129.6.0/23 -j ACCEPT
-A PREROUTING -s 203.130.64.0/18 -j ACCEPT
-A PREROUTING -s 203.130.176.0/20 -j ACCEPT
-A PREROUTING -s 203.132.160.0/19 -j ACCEPT
-A PREROUTING -s 203.133.160.0/19 -j ACCEPT
-A PREROUTING -s 203.142.160.0/19 -j ACCEPT
-A PREROUTING -s 203.142.216.0/23 -j ACCEPT
-A PREROUTING -s 203.149.112.0/20 -j ACCEPT
-A PREROUTING -s 203.152.160.0/19 -j ACCEPT
-A PREROUTING -s 203.153.144.0/20 -j ACCEPT
-A PREROUTING -s 203.160.140.0/22 -j ACCEPT
-A PREROUTING -s 203.163.104.24/29 -j ACCEPT
-A PREROUTING -s 203.163.104.64/29 -j ACCEPT
-A PREROUTING -s 203.163.104.200/29 -j ACCEPT
-A PREROUTING -s 203.163.104.208/29 -j ACCEPT
-A PREROUTING -s 203.166.208.0/21 -j ACCEPT
-A PREROUTING -s 203.169.4.0/23 -j ACCEPT
-A PREROUTING -s 203.170.96.0/19 -j ACCEPT
-A PREROUTING -s 203.171.160.0/19 -j ACCEPT
-A PREROUTING -s 203.173.96.0/19 -j ACCEPT
-A PREROUTING -s 203.175.32.0/19 -j ACCEPT
-A PREROUTING -s 203.175.188.0/22 -j ACCEPT
-A PREROUTING -s 203.190.4.0/22 -j ACCEPT
-A PREROUTING -s 203.190.26.0/23 -j ACCEPT
-A PREROUTING -s 203.192.128.126/32 -j ACCEPT
-A PREROUTING -s 203.192.134.198/32 -j ACCEPT
-A PREROUTING -s 203.192.134.202/32 -j ACCEPT
-A PREROUTING -s 203.192.142.0/24 -j ACCEPT
-A PREROUTING -s 203.192.148.0/28 -j ACCEPT
-A PREROUTING -s 203.192.148.16/29 -j ACCEPT
-A PREROUTING -s 203.192.148.64/26 -j ACCEPT
-A PREROUTING -s 203.192.148.152/29 -j ACCEPT
-A PREROUTING -s 203.192.148.160/27 -j ACCEPT
-A PREROUTING -s 203.192.156.7/32 -j ACCEPT
-A PREROUTING -s 203.192.157.32/27 -j ACCEPT
-A PREROUTING -s 203.192.157.64/28 -j ACCEPT
-A PREROUTING -s 203.192.157.96/27 -j ACCEPT
-A PREROUTING -s 203.192.164.153/32 -j ACCEPT
-A PREROUTING -s 203.192.164.154/32 -j ACCEPT
-A PREROUTING -s 203.192.164.165/32 -j ACCEPT
-A PREROUTING -s 203.192.164.166/32 -j ACCEPT
-A PREROUTING -s 203.192.164.173/32 -j ACCEPT
-A PREROUTING -s 203.192.164.181/32 -j ACCEPT
-A PREROUTING -s 203.192.164.182/32 -j ACCEPT
-A PREROUTING -s 203.192.164.245/32 -j ACCEPT
-A PREROUTING -s 203.192.164.246/32 -j ACCEPT
-A PREROUTING -s 203.192.165.1/32 -j ACCEPT
-A PREROUTING -s 203.192.165.2/31 -j ACCEPT
-A PREROUTING -s 203.192.165.4/32 -j ACCEPT
-A PREROUTING -s 203.192.165.6/32 -j ACCEPT
-A PREROUTING -s 203.192.165.8/32 -j ACCEPT
-A PREROUTING -s 203.192.165.17/32 -j ACCEPT
-A PREROUTING -s 203.192.165.19/32 -j ACCEPT
-A PREROUTING -s 203.192.165.35/32 -j ACCEPT
-A PREROUTING -s 203.192.165.37/32 -j ACCEPT
-A PREROUTING -s 203.192.165.57/32 -j ACCEPT
-A PREROUTING -s 203.192.165.58/32 -j ACCEPT
-A PREROUTING -s 203.192.165.61/32 -j ACCEPT
-A PREROUTING -s 203.192.165.62/32 -j ACCEPT
-A PREROUTING -s 203.192.165.65/32 -j ACCEPT
-A PREROUTING -s 203.192.165.66/32 -j ACCEPT
-A PREROUTING -s 203.192.165.69/32 -j ACCEPT
-A PREROUTING -s 203.192.165.70/32 -j ACCEPT
-A PREROUTING -s 203.192.165.74/32 -j ACCEPT
-A PREROUTING -s 203.192.165.81/32 -j ACCEPT
-A PREROUTING -s 203.192.165.82/32 -j ACCEPT
-A PREROUTING -s 203.192.165.85/32 -j ACCEPT
-A PREROUTING -s 203.192.165.86/32 -j ACCEPT
-A PREROUTING -s 203.192.165.89/32 -j ACCEPT
-A PREROUTING -s 203.192.165.90/32 -j ACCEPT
-A PREROUTING -s 203.192.165.93/32 -j ACCEPT
-A PREROUTING -s 203.192.165.94/32 -j ACCEPT
-A PREROUTING -s 203.192.165.97/32 -j ACCEPT
-A PREROUTING -s 203.192.165.98/32 -j ACCEPT
-A PREROUTING -s 203.192.165.101/32 -j ACCEPT
-A PREROUTING -s 203.192.165.106/32 -j ACCEPT
-A PREROUTING -s 203.192.165.113/32 -j ACCEPT
-A PREROUTING -s 203.192.165.114/32 -j ACCEPT
-A PREROUTING -s 203.192.165.121/32 -j ACCEPT
-A PREROUTING -s 203.192.165.122/32 -j ACCEPT
-A PREROUTING -s 203.192.165.134/32 -j ACCEPT
-A PREROUTING -s 203.192.165.189/32 -j ACCEPT
-A PREROUTING -s 203.192.165.229/32 -j ACCEPT
-A PREROUTING -s 203.192.165.230/32 -j ACCEPT
-A PREROUTING -s 203.192.165.237/32 -j ACCEPT
-A PREROUTING -s 203.192.165.238/32 -j ACCEPT
-A PREROUTING -s 203.192.165.254/32 -j ACCEPT
-A PREROUTING -s 203.192.182.0/25 -j ACCEPT
-A PREROUTING -s 203.193.117.164/32 -j ACCEPT
-A PREROUTING -s 203.207.16.0/20 -j ACCEPT
-A PREROUTING -s 203.210.16.0/20 -j ACCEPT
-A PREROUTING -s 203.210.32.0/19 -j ACCEPT
-A PREROUTING -s 203.212.96.0/19 -j ACCEPT
-A PREROUTING -s 203.212.160.0/19 -j ACCEPT
-A PREROUTING -s 203.215.192.0/19 -j ACCEPT
-A PREROUTING -s 203.216.160.0/19 -j ACCEPT
-A PREROUTING -s 203.217.204.0/22 -j ACCEPT
-A PREROUTING -s 203.217.208.0/20 -j ACCEPT
-A PREROUTING -s 203.217.224.0/19 -j ACCEPT
-A PREROUTING -s 203.222.33.10/32 -j ACCEPT
-A PREROUTING -s 203.222.33.13/32 -j ACCEPT
-A PREROUTING -s 203.223.96.0/19 -j ACCEPT
-A PREROUTING -s 203.223.177.0/24 -j ACCEPT
-A PREROUTING -s 203.224.0.0/13 -j ACCEPT
-A PREROUTING -s 203.232.0.0/16 -j ACCEPT
-A PREROUTING -s 203.233.0.0/17 -j ACCEPT
-A PREROUTING -s 203.233.128.0/24 -j ACCEPT
-A PREROUTING -s 203.233.154.0/23 -j ACCEPT
-A PREROUTING -s 203.233.156.0/24 -j ACCEPT
-A PREROUTING -s 203.233.165.0/24 -j ACCEPT
-A PREROUTING -s 203.233.192.0/19 -j ACCEPT
-A PREROUTING -s 203.233.224.0/20 -j ACCEPT
-A PREROUTING -s 203.234.0.0/15 -j ACCEPT
-A PREROUTING -s 203.236.0.0/14 -j ACCEPT
-A PREROUTING -s 203.240.64.0/19 -j ACCEPT
-A PREROUTING -s 203.240.96.0/23 -j ACCEPT
-A PREROUTING -s 203.240.128.0/19 -j ACCEPT
-A PREROUTING -s 203.240.191.0/24 -j ACCEPT
-A PREROUTING -s 203.240.192.0/18 -j ACCEPT
-A PREROUTING -s 203.241.0.0/17 -j ACCEPT
-A PREROUTING -s 203.241.128.0/19 -j ACCEPT
-A PREROUTING -s 203.241.160.0/22 -j ACCEPT
-A PREROUTING -s 203.241.164.0/23 -j ACCEPT
-A PREROUTING -s 203.241.167.0/24 -j ACCEPT
-A PREROUTING -s 203.241.168.0/22 -j ACCEPT
-A PREROUTING -s 203.241.172.0/23 -j ACCEPT
-A PREROUTING -s 203.241.174.0/24 -j ACCEPT
-A PREROUTING -s 203.241.176.0/20 -j ACCEPT
-A PREROUTING -s 203.241.192.0/20 -j ACCEPT
-A PREROUTING -s 203.241.208.0/21 -j ACCEPT
-A PREROUTING -s 203.241.220.0/22 -j ACCEPT
-A PREROUTING -s 203.241.224.0/19 -j ACCEPT
-A PREROUTING -s 203.242.0.0/18 -j ACCEPT
-A PREROUTING -s 203.242.64.0/19 -j ACCEPT
-A PREROUTING -s 203.242.96.0/20 -j ACCEPT
-A PREROUTING -s 203.242.120.0/21 -j ACCEPT
-A PREROUTING -s 203.242.128.0/17 -j ACCEPT
-A PREROUTING -s 203.243.0.0/18 -j ACCEPT
-A PREROUTING -s 203.243.128.0/17 -j ACCEPT
-A PREROUTING -s 203.244.0.0/14 -j ACCEPT
-A PREROUTING -s 203.248.0.0/14 -j ACCEPT
-A PREROUTING -s 203.252.0.0/20 -j ACCEPT
-A PREROUTING -s 203.252.16.0/21 -j ACCEPT
-A PREROUTING -s 203.252.27.0/24 -j ACCEPT
-A PREROUTING -s 203.252.28.0/22 -j ACCEPT
-A PREROUTING -s 203.252.32.0/19 -j ACCEPT
-A PREROUTING -s 203.252.64.0/18 -j ACCEPT
-A PREROUTING -s 203.252.128.0/17 -j ACCEPT
-A PREROUTING -s 203.253.0.0/19 -j ACCEPT
-A PREROUTING -s 203.253.32.0/20 -j ACCEPT
-A PREROUTING -s 203.253.64.0/19 -j ACCEPT
-A PREROUTING -s 203.253.96.0/20 -j ACCEPT
-A PREROUTING -s 203.253.128.0/18 -j ACCEPT
-A PREROUTING -s 203.253.192.0/19 -j ACCEPT
-A PREROUTING -s 203.253.224.0/21 -j ACCEPT
-A PREROUTING -s 203.253.232.0/24 -j ACCEPT
-A PREROUTING -s 203.253.234.0/23 -j ACCEPT
-A PREROUTING -s 203.253.236.0/22 -j ACCEPT
-A PREROUTING -s 203.253.240.0/20 -j ACCEPT
-A PREROUTING -s 203.254.9.0/24 -j ACCEPT
-A PREROUTING -s 203.254.32.0/23 -j ACCEPT
-A PREROUTING -s 203.254.40.0/24 -j ACCEPT
-A PREROUTING -s 203.254.50.0/23 -j ACCEPT
-A PREROUTING -s 203.254.52.0/22 -j ACCEPT
-A PREROUTING -s 203.254.56.0/24 -j ACCEPT
-A PREROUTING -s 203.254.96.0/19 -j ACCEPT
-A PREROUTING -s 203.254.128.0/17 -j ACCEPT
-A PREROUTING -s 203.255.0.0/18 -j ACCEPT
-A PREROUTING -s 203.255.64.0/19 -j ACCEPT
-A PREROUTING -s 203.255.96.0/20 -j ACCEPT
-A PREROUTING -s 203.255.112.0/21 -j ACCEPT
-A PREROUTING -s 203.255.124.0/22 -j ACCEPT
-A PREROUTING -s 203.255.128.0/18 -j ACCEPT
-A PREROUTING -s 203.255.192.0/20 -j ACCEPT
-A PREROUTING -s 203.255.208.0/21 -j ACCEPT
-A PREROUTING -s 203.255.216.0/22 -j ACCEPT
-A PREROUTING -s 203.255.220.0/23 -j ACCEPT
-A PREROUTING -s 203.255.224.0/21 -j ACCEPT
-A PREROUTING -s 203.255.232.0/23 -j ACCEPT
-A PREROUTING -s 203.255.234.0/24 -j ACCEPT
-A PREROUTING -s 203.255.236.0/22 -j ACCEPT
-A PREROUTING -s 203.255.240.0/20 -j ACCEPT
-A PREROUTING -s 204.15.20.124/31 -j ACCEPT
-A PREROUTING -s 204.15.20.141/32 -j ACCEPT
-A PREROUTING -s 204.15.20.192/32 -j ACCEPT
-A PREROUTING -s 204.15.21.5/32 -j ACCEPT
-A PREROUTING -s 204.15.21.97/32 -j ACCEPT
-A PREROUTING -s 204.15.21.104/30 -j ACCEPT
-A PREROUTING -s 204.15.21.108/32 -j ACCEPT
-A PREROUTING -s 204.15.22.110/32 -j ACCEPT
-A PREROUTING -s 204.70.194.85/32 -j ACCEPT
-A PREROUTING -s 204.70.204.69/32 -j ACCEPT
-A PREROUTING -s 204.70.204.70/32 -j ACCEPT
-A PREROUTING -s 204.70.204.73/32 -j ACCEPT
-A PREROUTING -s 204.70.204.74/32 -j ACCEPT
-A PREROUTING -s 204.70.204.77/32 -j ACCEPT
-A PREROUTING -s 204.70.204.78/32 -j ACCEPT
-A PREROUTING -s 204.70.204.81/32 -j ACCEPT
-A PREROUTING -s 204.70.204.82/32 -j ACCEPT
-A PREROUTING -s 204.70.204.85/32 -j ACCEPT
-A PREROUTING -s 204.70.204.86/32 -j ACCEPT
-A PREROUTING -s 204.70.204.89/32 -j ACCEPT
-A PREROUTING -s 204.70.204.90/32 -j ACCEPT
-A PREROUTING -s 204.70.224.45/32 -j ACCEPT
-A PREROUTING -s 204.70.224.49/32 -j ACCEPT
-A PREROUTING -s 204.245.207.65/32 -j ACCEPT
-A PREROUTING -s 204.245.207.66/31 -j ACCEPT
-A PREROUTING -s 204.245.207.68/32 -j ACCEPT
-A PREROUTING -s 204.245.207.81/32 -j ACCEPT
-A PREROUTING -s 204.245.207.82/31 -j ACCEPT
-A PREROUTING -s 205.248.40.0/24 -j ACCEPT
-A PREROUTING -s 205.248.52.0/24 -j ACCEPT
-A PREROUTING -s 206.28.96.126/32 -j ACCEPT
-A PREROUTING -s 206.73.210.0/26 -j ACCEPT
-A PREROUTING -s 206.73.210.192/26 -j ACCEPT
-A PREROUTING -s 206.73.211.0/27 -j ACCEPT
-A PREROUTING -s 206.73.224.128/26 -j ACCEPT
-A PREROUTING -s 206.73.249.160/27 -j ACCEPT
-A PREROUTING -s 206.182.226.0/27 -j ACCEPT
-A PREROUTING -s 206.182.235.64/27 -j ACCEPT
-A PREROUTING -s 206.219.0.0/18 -j ACCEPT
-A PREROUTING -s 207.16.94.163/32 -j ACCEPT
-A PREROUTING -s 207.46.33.134/31 -j ACCEPT
-A PREROUTING -s 207.46.35.35/32 -j ACCEPT
-A PREROUTING -s 207.46.35.36/30 -j ACCEPT
-A PREROUTING -s 207.46.35.40/32 -j ACCEPT
-A PREROUTING -s 207.117.113.0/24 -j ACCEPT
-A PREROUTING -s 207.199.157.0/24 -j ACCEPT
-A PREROUTING -s 207.209.12.0/24 -j ACCEPT
-A PREROUTING -s 207.209.210.0/24 -j ACCEPT
-A PREROUTING -s 208.48.23.37/32 -j ACCEPT
-A PREROUTING -s 208.48.23.38/32 -j ACCEPT
-A PREROUTING -s 208.48.251.131/32 -j ACCEPT
-A PREROUTING -s 209.28.31.0/24 -j ACCEPT
-A PREROUTING -s 209.28.252.0/24 -j ACCEPT
-A PREROUTING -s 209.28.255.0/24 -j ACCEPT
-A PREROUTING -s 209.137.140.224/28 -j ACCEPT
-A PREROUTING -s 209.212.236.0/24 -j ACCEPT
-A PREROUTING -s 210.0.32.0/19 -j ACCEPT
-A PREROUTING -s 210.2.32.0/19 -j ACCEPT
-A PREROUTING -s 210.4.88.0/21 -j ACCEPT
-A PREROUTING -s 210.4.216.0/21 -j ACCEPT
-A PREROUTING -s 210.16.116.0/22 -j ACCEPT
-A PREROUTING -s 210.16.192.0/18 -j ACCEPT
-A PREROUTING -s 210.57.12.44/30 -j ACCEPT
-A PREROUTING -s 210.57.224.0/19 -j ACCEPT
-A PREROUTING -s 210.80.0.101/32 -j ACCEPT
-A PREROUTING -s 210.80.0.102/32 -j ACCEPT
-A PREROUTING -s 210.80.1.205/32 -j ACCEPT
-A PREROUTING -s 210.80.38.101/32 -j ACCEPT
-A PREROUTING -s 210.80.38.102/32 -j ACCEPT
-A PREROUTING -s 210.80.38.105/32 -j ACCEPT
-A PREROUTING -s 210.80.38.106/32 -j ACCEPT
-A PREROUTING -s 210.80.38.109/32 -j ACCEPT
-A PREROUTING -s 210.80.38.110/32 -j ACCEPT
-A PREROUTING -s 210.80.38.114/32 -j ACCEPT
-A PREROUTING -s 210.80.38.221/32 -j ACCEPT
-A PREROUTING -s 210.80.38.222/32 -j ACCEPT
-A PREROUTING -s 210.80.38.229/32 -j ACCEPT
-A PREROUTING -s 210.80.38.233/32 -j ACCEPT
-A PREROUTING -s 210.80.38.234/32 -j ACCEPT
-A PREROUTING -s 210.80.48.13/32 -j ACCEPT
-A PREROUTING -s 210.80.49.30/32 -j ACCEPT
-A PREROUTING -s 210.80.96.0/21 -j ACCEPT
-A PREROUTING -s 210.80.104.0/22 -j ACCEPT
-A PREROUTING -s 210.80.108.0/23 -j ACCEPT
-A PREROUTING -s 210.80.110.0/24 -j ACCEPT
-A PREROUTING -s 210.80.111.0/25 -j ACCEPT
-A PREROUTING -s 210.80.111.128/29 -j ACCEPT
-A PREROUTING -s 210.80.111.140/30 -j ACCEPT
-A PREROUTING -s 210.80.111.144/28 -j ACCEPT
-A PREROUTING -s 210.80.111.160/27 -j ACCEPT
-A PREROUTING -s 210.80.111.192/26 -j ACCEPT
-A PREROUTING -s 210.80.112.0/20 -j ACCEPT
-A PREROUTING -s 210.80.253.25/32 -j ACCEPT
-A PREROUTING -s 210.80.253.29/32 -j ACCEPT
-A PREROUTING -s 210.80.253.41/32 -j ACCEPT
-A PREROUTING -s 210.80.253.57/32 -j ACCEPT
-A PREROUTING -s 210.80.253.65/32 -j ACCEPT
-A PREROUTING -s 210.87.192.0/19 -j ACCEPT
-A PREROUTING -s 210.89.160.0/19 -j ACCEPT
-A PREROUTING -s 210.90.0.0/15 -j ACCEPT
-A PREROUTING -s 210.92.0.0/16 -j ACCEPT
-A PREROUTING -s 210.93.0.0/17 -j ACCEPT
-A PREROUTING -s 210.93.128.0/18 -j ACCEPT
-A PREROUTING -s 210.93.192.0/19 -j ACCEPT
-A PREROUTING -s 210.94.0.0/15 -j ACCEPT
-A PREROUTING -s 210.96.0.0/16 -j ACCEPT
-A PREROUTING -s 210.97.0.0/17 -j ACCEPT
-A PREROUTING -s 210.97.128.0/18 -j ACCEPT
-A PREROUTING -s 210.97.192.0/22 -j ACCEPT
-A PREROUTING -s 210.97.224.0/19 -j ACCEPT
-A PREROUTING -s 210.98.0.0/17 -j ACCEPT
-A PREROUTING -s 210.98.128.0/18 -j ACCEPT
-A PREROUTING -s 210.98.224.0/19 -j ACCEPT
-A PREROUTING -s 210.99.0.0/16 -j ACCEPT
-A PREROUTING -s 210.100.0.0/16 -j ACCEPT
-A PREROUTING -s 210.101.60.0/22 -j ACCEPT
-A PREROUTING -s 210.101.64.0/18 -j ACCEPT
-A PREROUTING -s 210.101.128.0/17 -j ACCEPT
-A PREROUTING -s 210.102.0.0/15 -j ACCEPT
-A PREROUTING -s 210.104.0.0/14 -j ACCEPT
-A PREROUTING -s 210.108.0.0/15 -j ACCEPT
-A PREROUTING -s 210.110.0.0/16 -j ACCEPT
-A PREROUTING -s 210.111.0.0/18 -j ACCEPT
-A PREROUTING -s 210.111.80.0/20 -j ACCEPT
-A PREROUTING -s 210.111.96.0/20 -j ACCEPT
-A PREROUTING -s 210.111.128.0/17 -j ACCEPT
-A PREROUTING -s 210.112.0.0/15 -j ACCEPT
-A PREROUTING -s 210.114.0.0/18 -j ACCEPT
-A PREROUTING -s 210.114.88.0/21 -j ACCEPT
-A PREROUTING -s 210.114.104.0/21 -j ACCEPT
-A PREROUTING -s 210.114.160.0/19 -j ACCEPT
-A PREROUTING -s 210.114.208.0/20 -j ACCEPT
-A PREROUTING -s 210.114.224.0/19 -j ACCEPT
-A PREROUTING -s 210.115.32.0/19 -j ACCEPT
-A PREROUTING -s 210.115.96.0/19 -j ACCEPT
-A PREROUTING -s 210.115.128.0/17 -j ACCEPT
-A PREROUTING -s 210.116.0.0/14 -j ACCEPT
-A PREROUTING -s 210.120.0.0/14 -j ACCEPT
-A PREROUTING -s 210.124.0.0/15 -j ACCEPT
-A PREROUTING -s 210.126.0.0/16 -j ACCEPT
-A PREROUTING -s 210.127.32.0/19 -j ACCEPT
-A PREROUTING -s 210.127.64.0/18 -j ACCEPT
-A PREROUTING -s 210.127.128.0/17 -j ACCEPT
-A PREROUTING -s 210.176.150.0/23 -j ACCEPT
-A PREROUTING -s 210.178.0.0/15 -j ACCEPT
-A PREROUTING -s 210.180.0.0/14 -j ACCEPT
-A PREROUTING -s 210.192.64.0/19 -j ACCEPT
-A PREROUTING -s 210.204.0.0/16 -j ACCEPT
-A PREROUTING -s 210.205.0.0/18 -j ACCEPT
-A PREROUTING -s 210.205.64.0/19 -j ACCEPT
-A PREROUTING -s 210.205.112.0/20 -j ACCEPT
-A PREROUTING -s 210.205.128.0/17 -j ACCEPT
-A PREROUTING -s 210.206.0.0/15 -j ACCEPT
-A PREROUTING -s 210.210.192.0/18 -j ACCEPT
-A PREROUTING -s 210.211.0.0/20 -j ACCEPT
-A PREROUTING -s 210.211.64.0/19 -j ACCEPT
-A PREROUTING -s 210.216.0.0/15 -j ACCEPT
-A PREROUTING -s 210.218.0.0/18 -j ACCEPT
-A PREROUTING -s 210.218.64.0/19 -j ACCEPT
-A PREROUTING -s 210.218.128.0/17 -j ACCEPT
-A PREROUTING -s 210.219.32.0/19 -j ACCEPT
-A PREROUTING -s 210.219.64.0/18 -j ACCEPT
-A PREROUTING -s 210.219.128.0/17 -j ACCEPT
-A PREROUTING -s 210.220.0.0/19 -j ACCEPT
-A PREROUTING -s 210.220.64.0/18 -j ACCEPT
-A PREROUTING -s 210.220.128.0/17 -j ACCEPT
-A PREROUTING -s 210.221.0.0/17 -j ACCEPT
-A PREROUTING -s 210.221.128.0/19 -j ACCEPT
-A PREROUTING -s 210.221.192.0/18 -j ACCEPT
-A PREROUTING -s 210.222.0.0/15 -j ACCEPT
-A PREROUTING -s 211.32.0.0/15 -j ACCEPT
-A PREROUTING -s 211.34.0.0/16 -j ACCEPT
-A PREROUTING -s 211.35.0.0/18 -j ACCEPT
-A PREROUTING -s 211.35.64.0/20 -j ACCEPT
-A PREROUTING -s 211.35.96.0/22 -j ACCEPT
-A PREROUTING -s 211.35.128.0/17 -j ACCEPT
-A PREROUTING -s 211.36.0.0/18 -j ACCEPT
-A PREROUTING -s 211.36.64.0/19 -j ACCEPT
-A PREROUTING -s 211.36.128.0/17 -j ACCEPT
-A PREROUTING -s 211.37.0.0/17 -j ACCEPT
-A PREROUTING -s 211.37.128.0/18 -j ACCEPT
-A PREROUTING -s 211.37.192.0/19 -j ACCEPT
-A PREROUTING -s 211.38.0.0/15 -j ACCEPT
-A PREROUTING -s 211.40.0.0/14 -j ACCEPT
-A PREROUTING -s 211.44.0.0/15 -j ACCEPT
-A PREROUTING -s 211.46.0.0/16 -j ACCEPT
-A PREROUTING -s 211.47.0.0/17 -j ACCEPT
-A PREROUTING -s 211.47.128.0/19 -j ACCEPT
-A PREROUTING -s 211.47.160.0/22 -j ACCEPT
-A PREROUTING -s 211.47.176.0/20 -j ACCEPT
-A PREROUTING -s 211.47.192.0/19 -j ACCEPT
-A PREROUTING -s 211.47.224.0/20 -j ACCEPT
-A PREROUTING -s 211.48.0.0/13 -j ACCEPT
-A PREROUTING -s 211.56.0.0/14 -j ACCEPT
-A PREROUTING -s 211.60.0.0/16 -j ACCEPT
-A PREROUTING -s 211.61.0.0/18 -j ACCEPT
-A PREROUTING -s 211.61.64.0/19 -j ACCEPT
-A PREROUTING -s 211.61.112.0/20 -j ACCEPT
-A PREROUTING -s 211.61.128.0/17 -j ACCEPT
-A PREROUTING -s 211.62.0.0/16 -j ACCEPT
-A PREROUTING -s 211.63.0.0/18 -j ACCEPT
-A PREROUTING -s 211.63.64.0/19 -j ACCEPT
-A PREROUTING -s 211.63.128.0/17 -j ACCEPT
-A PREROUTING -s 211.104.0.0/13 -j ACCEPT
-A PREROUTING -s 211.112.0.0/14 -j ACCEPT
-A PREROUTING -s 211.116.0.0/17 -j ACCEPT
-A PREROUTING -s 211.116.128.0/19 -j ACCEPT
-A PREROUTING -s 211.116.176.0/20 -j ACCEPT
-A PREROUTING -s 211.116.192.0/18 -j ACCEPT
-A PREROUTING -s 211.117.0.0/16 -j ACCEPT
-A PREROUTING -s 211.118.0.0/15 -j ACCEPT
-A PREROUTING -s 211.168.0.0/14 -j ACCEPT
-A PREROUTING -s 211.172.0.0/18 -j ACCEPT
-A PREROUTING -s 211.172.64.0/20 -j ACCEPT
-A PREROUTING -s 211.172.96.0/20 -j ACCEPT
-A PREROUTING -s 211.172.128.0/19 -j ACCEPT
-A PREROUTING -s 211.172.176.0/20 -j ACCEPT
-A PREROUTING -s 211.172.208.0/20 -j ACCEPT
-A PREROUTING -s 211.172.224.0/19 -j ACCEPT
-A PREROUTING -s 211.173.0.0/16 -j ACCEPT
-A PREROUTING -s 211.174.0.0/20 -j ACCEPT
-A PREROUTING -s 211.174.32.0/19 -j ACCEPT
-A PREROUTING -s 211.174.64.0/18 -j ACCEPT
-A PREROUTING -s 211.174.128.0/17 -j ACCEPT
-A PREROUTING -s 211.175.0.0/16 -j ACCEPT
-A PREROUTING -s 211.176.0.0/13 -j ACCEPT
-A PREROUTING -s 211.184.0.0/14 -j ACCEPT
-A PREROUTING -s 211.188.0.0/15 -j ACCEPT
-A PREROUTING -s 211.190.0.0/19 -j ACCEPT
-A PREROUTING -s 211.190.32.0/20 -j ACCEPT
-A PREROUTING -s 211.190.112.0/20 -j ACCEPT
-A PREROUTING -s 211.190.128.0/20 -j ACCEPT
-A PREROUTING -s 211.190.224.0/19 -j ACCEPT
-A PREROUTING -s 211.191.0.0/20 -j ACCEPT
-A PREROUTING -s 211.191.32.0/20 -j ACCEPT
-A PREROUTING -s 211.191.64.0/19 -j ACCEPT
-A PREROUTING -s 211.191.112.0/20 -j ACCEPT
-A PREROUTING -s 211.191.128.0/20 -j ACCEPT
-A PREROUTING -s 211.191.160.0/19 -j ACCEPT
-A PREROUTING -s 211.191.240.0/20 -j ACCEPT
-A PREROUTING -s 211.192.0.0/11 -j ACCEPT
-A PREROUTING -s 211.224.0.0/13 -j ACCEPT
-A PREROUTING -s 211.232.0.0/16 -j ACCEPT
-A PREROUTING -s 211.233.0.0/18 -j ACCEPT
-A PREROUTING -s 211.233.64.0/19 -j ACCEPT
-A PREROUTING -s 211.233.128.0/17 -j ACCEPT
-A PREROUTING -s 211.234.0.0/16 -j ACCEPT
-A PREROUTING -s 211.235.32.0/19 -j ACCEPT
-A PREROUTING -s 211.235.64.0/18 -j ACCEPT
-A PREROUTING -s 211.235.128.0/17 -j ACCEPT
-A PREROUTING -s 211.236.0.0/16 -j ACCEPT
-A PREROUTING -s 211.237.0.0/17 -j ACCEPT
-A PREROUTING -s 211.237.128.0/20 -j ACCEPT
-A PREROUTING -s 211.237.160.0/19 -j ACCEPT
-A PREROUTING -s 211.237.208.0/20 -j ACCEPT
-A PREROUTING -s 211.237.224.0/19 -j ACCEPT
-A PREROUTING -s 211.238.0.0/17 -j ACCEPT
-A PREROUTING -s 211.238.128.0/18 -j ACCEPT
-A PREROUTING -s 211.238.192.0/20 -j ACCEPT
-A PREROUTING -s 211.238.224.0/19 -j ACCEPT
-A PREROUTING -s 211.239.0.0/16 -j ACCEPT
-A PREROUTING -s 211.240.0.0/13 -j ACCEPT
-A PREROUTING -s 211.248.0.0/14 -j ACCEPT
-A PREROUTING -s 211.252.0.0/15 -j ACCEPT
-A PREROUTING -s 211.254.0.0/17 -j ACCEPT
-A PREROUTING -s 211.254.128.0/18 -j ACCEPT
-A PREROUTING -s 211.254.192.0/19 -j ACCEPT
-A PREROUTING -s 211.254.252.0/22 -j ACCEPT
-A PREROUTING -s 211.255.0.0/16 -j ACCEPT
-A PREROUTING -s 212.60.15.0/24 -j ACCEPT
-A PREROUTING -s 216.218.252.225/32 -j ACCEPT
-A PREROUTING -s 217.147.182.0/23 -j ACCEPT
-A PREROUTING -s 218.36.0.0/16 -j ACCEPT
-A PREROUTING -s 218.37.0.0/17 -j ACCEPT
-A PREROUTING -s 218.37.192.0/18 -j ACCEPT
-A PREROUTING -s 218.38.0.0/15 -j ACCEPT
-A PREROUTING -s 218.48.0.0/13 -j ACCEPT
-A PREROUTING -s 218.101.128.0/17 -j ACCEPT
-A PREROUTING -s 218.144.0.0/12 -j ACCEPT
-A PREROUTING -s 218.209.0.0/16 -j ACCEPT
-A PREROUTING -s 218.232.0.0/13 -j ACCEPT
-A PREROUTING -s 219.240.0.0/15 -j ACCEPT
-A PREROUTING -s 219.248.0.0/13 -j ACCEPT
-A PREROUTING -s 220.64.0.0/11 -j ACCEPT
-A PREROUTING -s 220.103.0.0/16 -j ACCEPT
-A PREROUTING -s 220.116.0.0/14 -j ACCEPT
-A PREROUTING -s 220.120.0.0/13 -j ACCEPT
-A PREROUTING -s 220.149.0.0/16 -j ACCEPT
-A PREROUTING -s 220.230.0.0/16 -j ACCEPT
-A PREROUTING -s 221.132.64.0/19 -j ACCEPT
-A PREROUTING -s 221.133.48.0/20 -j ACCEPT
-A PREROUTING -s 221.133.128.0/18 -j ACCEPT
-A PREROUTING -s 221.138.0.0/15 -j ACCEPT
-A PREROUTING -s 221.140.0.0/14 -j ACCEPT
-A PREROUTING -s 221.144.0.0/12 -j ACCEPT
-A PREROUTING -s 221.160.0.0/13 -j ACCEPT
-A PREROUTING -s 221.168.0.0/16 -j ACCEPT
-A PREROUTING -s 222.96.0.0/12 -j ACCEPT
-A PREROUTING -s 222.112.0.0/13 -j ACCEPT
-A PREROUTING -s 222.120.0.0/15 -j ACCEPT
-A PREROUTING -s 222.122.0.0/16 -j ACCEPT
-A PREROUTING -s 222.231.0.0/18 -j ACCEPT
-A PREROUTING -s 222.232.0.0/13 -j ACCEPT
-A PREROUTING -s 222.251.128.0/17 -j ACCEPT
-A PREROUTING -s 223.26.128.0/17 -j ACCEPT
-A PREROUTING -s 223.28.128.0/17 -j ACCEPT
-A PREROUTING -s 223.32.0.0/11 -j ACCEPT
-A PREROUTING -s 223.130.64.0/18 -j ACCEPT
-A PREROUTING -s 223.130.128.0/17 -j ACCEPT
-A PREROUTING -s 223.131.0.0/16 -j ACCEPT
-A PREROUTING -s 223.165.128.0/17 -j ACCEPT
-A PREROUTING -s 223.168.0.0/13 -j ACCEPT
-A PREROUTING -s 223.194.0.0/15 -j ACCEPT
-A PREROUTING -s 223.222.0.0/16 -j ACCEPT
-A PREROUTING -s 223.253.0.0/16 -j ACCEPT
-A PREROUTING -s 223.255.192.0/19 -j ACCEPT
# ---------------------------------------------
# 한국 아이피주소, 1.1.1.1 DNS, Google DNS, Open DNS, quad9 DNS, Comodo Secure DNS, AdGuard DNS, 내부망 아이피주소를 제외한 모든 tcp, udp 연결을 차단합니다.
-A PREROUTING -p tcp -j DROP
-A PREROUTING -p udp -j DROP
COMMIT
